Replace 'firecookie' by 'cookies' in string bundles

--- a/extension/locale/cs/cookies.properties
+++ b/extension/locale/cs/cookies.properties
@@ -1,126 +1,126 @@
 extensions.firecookie@janodvarko.cz.description=Správce cookies pro Firebug. Pro jeho používání musí být nainstalován Firebug.
-firecookie.Panel=Cookies
-firecookie.Session=Sezení
-firecookie.AllowGlobally=Přijímat cookies ze všech webů
-firecookie.LogEvents=Zobrazovat zprávy v konzoli
-firecookie.clearWhenDeny=Pročistit cookies při odmítnutí
-firecookie.Cut=Vyjmout
-firecookie.Copy=Kopírovat
-firecookie.CopyAll=Kopírovat vše
-firecookie.Paste=Vložit
-firecookie.Delete=Odstranit
-firecookie.Clear_Value=Smazat hodnotu
-firecookie.Edit=Upravit
-firecookie.Accept=Přijmout
-firecookie.header.Reset_Header=Obnovit hlavičku
-firecookie.Intro=Můžete uvést, od kterých webů budete vždy nebo nikdy přijímat cookies.\nVlože přesnou adresu webu, který chcete nastavit a poté klikněte na Blokovat,\nPovolit nyní nebo Povolit.
-firecookie.ExceptionsTitle=Vyjímky - cookies
+cookies.Panel=Cookies
+cookies.Session=Sezení
+cookies.AllowGlobally=Přijímat cookies ze všech webů
+cookies.LogEvents=Zobrazovat zprávy v konzoli
+cookies.clearWhenDeny=Pročistit cookies při odmítnutí
+cookies.Cut=Vyjmout
+cookies.Copy=Kopírovat
+cookies.CopyAll=Kopírovat vše
+cookies.Paste=Vložit
+cookies.Delete=Odstranit
+cookies.Clear_Value=Smazat hodnotu
+cookies.Edit=Upravit
+cookies.Accept=Přijmout
+cookies.header.Reset_Header=Obnovit hlavičku
+cookies.Intro=Můžete uvést, od kterých webů budete vždy nebo nikdy přijímat cookies.\nVlože přesnou adresu webu, který chcete nastavit a poté klikněte na Blokovat,\nPovolit nyní nebo Povolit.
+cookies.ExceptionsTitle=Vyjímky - cookies
 cookies.modulemanager.description=Podpora sledování cookies
 cookies.HostEnable=Povolit panel cookies pro %S
 cookies.HostDisable=Zakázat panel cookies pro %S
 cookies.Permissions=Povolit či zakázat panel cookies
 cookies.PermissionsIntro=Zvolit stránky, kde bude panel cookies povolen či zakázán
-firecookie.SystemPages=Systémové stránky
-firecookie.LocalFiles=Lokální soubory
-firecookie.confirm.removeall=Chcete odstranit všechny cookies ze seznamu?
-firecookie.confirm.removeallsession=Chcete odstranit všechny cookies sezení ze seznamu?
-firecookie.msg.Do_not_show_this_message_again=Tuto zprávu již nezobrazovat
-firecookie.Confirm_cookie_removal=Potvrdit odstranění cookie
-firecookie.removeall.tooltip=Odstranit všechny cookies ze seznamu
-firecookie.Remove_Session_Cookies=Odstranit cookies sezení
-firecookie.removeallsession.tooltip=Odstranit všechny cookies sezení ze seznamu.
-firecookie.createcookie.tooltip=Vytvořit novou cookie pro %S
-firecookie.createcookie.defaultvalue=Hodnota
-firecookie.perm.manage.tooltip=Upravit povolení cookie pro %S
-firecookie.console.cookiescleared=Všechny cookies byly odstraněny.
-firecookie.console.sessioncookiescleared=Všechny cookies sezení byly odstraněny.
-firecookie.console.cookiesrejected=Odmítnuté cookies:
-firecookie.console.nocookiesreceived=Nebyly přijaty žádné cookies
-firecookie.console.cookie=Cookie
-firecookie.console.deleted=Vymazané
-firecookie.console.added=Přidané
-firecookie.console.changed=Změněné
-firecookie.console.cleared=Vyčištěno
-firecookie.domain.label=Doména
-firecookie.secure.label=Bezpečné
-firecookie.status.accepted=Přijaté
-firecookie.status.downgraded=Downgradeované
-firecookie.status.flagged=Označené
-firecookie.status.rejected=Odmítnuté
-firecookie.info.valuetab.label=Hodnota
-firecookie.info.rawdatatab.Raw_Data=Surová data
-firecookie.info.jsontab.JSON=JSON
-firecookie.info.xmltab.XML=XML
-firecookie.default.session=Defaultní (Přijímat cookies sezení)
-firecookie.default.thirdPartySession=Defaultní (Přijímat cookies sezení)
-firecookie.default.thirdParty=Defaultní (Přijímat cookies)
-firecookie.default.allow=Defaultní (Přijímat cookies)
-firecookie.default.deny=Defaultní (Nepřijímat cookies)
-firecookie.default.warn=Defaultní (Před přijmutím cookie zobrazit varování)
-firecookie.host.session=Přijímat cookies sezení z %S
-firecookie.host.accept=Přijímat cookies z %S
-firecookie.host.reject=Nepřijímat cookies z %S
-firecookie.edit.invalidname=Jméno cookie je nesprávné
-firecookie.edit.invalidhost=Hostitel cookie je nesprávný
-firecookie.edit.invalidpath=Cesta ke cookie je nesprávná
-firecookie.header.name=Název
-firecookie.header.value=Hodnota
-firecookie.header.domain=Doména
-firecookie.header.size=Velikost
-firecookie.header.path=Cesta
-firecookie.header.expires=Vyprší
-firecookie.header.security=Bezpečnost
-firecookie.header.status=Stav
-firecookie.header.httponly=HttpOnly
-firecookie.header.name.tooltip=Název
-firecookie.header.value.tooltip=Hodnota
-firecookie.header.domain.tooltip=Doména
-firecookie.header.size.tooltip=Velikost
-firecookie.header.path.tooltip=Cesta
-firecookie.header.expires.tooltip=Vyprší
-firecookie.header.security.tooltip=Bezpečnost
-firecookie.header.status.tooltip=Stav
-firecookie.header.httponly.tooltip=Indikuje, zda se jedná o cookie pouze pro HTTP
-firecookie.netinfo.Received_Cookies=Přijaté cookies
-firecookie.netinfo.Sent_Cookies=Odeslané cookies
-firecookie.Path_Filter=Filtr cesty
-firecookie.menu.Cookies=Cookies
-firecookie.export.Export_All_Cookies=Exportovat všechny cookies
-firecookie.export.Export_All_Cookies_Tooltip=Exportovat všechny cookies z prohlížeče do souboru cookies.txt
-firecookie.export.Export_For_Site=Exportovat cookies pro tento web...
-firecookie.export.Export_For_Site_Tooltip=Exportovat cookies pro tento web do souboru cookies.txt
-firecookie.message.There_is_no_active_page=Žádná stránka není aktivní.
-firecookie.Break_On_Cookie=Pozastavit při změně cookie
-firecookie.Disable_Break_On_Cookie=Vypnout pozastavení při změně cookie
-firecookie.Cookie_Breakpoints=Cookie breakpointy
-firecookie.menu.Break_On_Cookie=Pozastavit při cookie '%S'
-firecookie.menu.tooltip.Break_On_Cookie=Pozastavit při '%S' pokud je odstraněna či změněna
-firecookie.menu.Edit_Breakpoint_Condition=Upravit podmínky breakpointu
-firecookie.Breakpoint_condition_evaluation_fails=Vyhodnocení podmínek breakpointu selhalo
-firecookie.RemoveAll=Odstranit cookies
-firecookie.Create=Vytvořit cookie
-firecookie.Tools=Nástroje
-firecookie.ToolsTooltip=Nástroje
-firecookie.ViewAll=Zobrazit všechny cookies...
-firecookie.ViewAllTooltip=Otevřít správce cookies
-firecookie.ViewExceptions=Nastavení jednotlivých webů...
-firecookie.ViewExceptionsTooltip=Zobrazit seznam povolených či zakázaných webů
-firecookie.Help=Nápověda
-firecookie.HelpTooltip=Nápověda pro Firecookie
-firecookie.About=O Firecookie...
-firecookie.AboutTooltip=Informace o Firecookie
-firecookie.Filter=Filtr
-firecookie.FilterTooltip=Filtruje seznam cookies dle zadaných podmínek
-firecookie.filter.byPath=Filtrovat cookie podle cesty
-firecookie.filter.byPathTooltip=Zobrazit pouze cookies, které se shodují s aktuální cestou
-firecookie.filter.showRejectedCookies=Zobrazit odmítnuté cookies
-firecookie.filter.showRejectedCookiesTooltip=Zobrazí v seznamu také odmítnuté cookies
-firecookie.edit.title=Upravit cookies
-firecookie.edit.name.label=Jméno:
-firecookie.edit.domain.label=Host:
-firecookie.edit.path.label=Cesta:
-firecookie.edit.expire.label=Platnost:
-firecookie.edit.value.label=Hodnota:
-firecookie.edit.secure.label=Bezpečná cookie
-firecookie.edit.httponly.label=Pouze HTTP
-firecookie.edit.session.label=Sezení
+cookies.SystemPages=Systémové stránky
+cookies.LocalFiles=Lokální soubory
+cookies.confirm.removeall=Chcete odstranit všechny cookies ze seznamu?
+cookies.confirm.removeallsession=Chcete odstranit všechny cookies sezení ze seznamu?
+cookies.msg.Do_not_show_this_message_again=Tuto zprávu již nezobrazovat
+cookies.Confirm_cookie_removal=Potvrdit odstranění cookie
+cookies.removeall.tooltip=Odstranit všechny cookies ze seznamu
+cookies.Remove_Session_Cookies=Odstranit cookies sezení
+cookies.removeallsession.tooltip=Odstranit všechny cookies sezení ze seznamu.
+cookies.createcookie.tooltip=Vytvořit novou cookie pro %S
+cookies.createcookie.defaultvalue=Hodnota
+cookies.perm.manage.tooltip=Upravit povolení cookie pro %S
+cookies.console.cookiescleared=Všechny cookies byly odstraněny.
+cookies.console.sessioncookiescleared=Všechny cookies sezení byly odstraněny.
+cookies.console.cookiesrejected=Odmítnuté cookies:
+cookies.console.nocookiesreceived=Nebyly přijaty žádné cookies
+cookies.console.cookie=Cookie
+cookies.console.deleted=Vymazané
+cookies.console.added=Přidané
+cookies.console.changed=Změněné
+cookies.console.cleared=Vyčištěno
+cookies.domain.label=Doména
+cookies.secure.label=Bezpečné
+cookies.status.accepted=Přijaté
+cookies.status.downgraded=Downgradeované
+cookies.status.flagged=Označené
+cookies.status.rejected=Odmítnuté
+cookies.info.valuetab.label=Hodnota
+cookies.info.rawdatatab.Raw_Data=Surová data
+cookies.info.jsontab.JSON=JSON
+cookies.info.xmltab.XML=XML
+cookies.default.session=Defaultní (Přijímat cookies sezení)
+cookies.default.thirdPartySession=Defaultní (Přijímat cookies sezení)
+cookies.default.thirdParty=Defaultní (Přijímat cookies)
+cookies.default.allow=Defaultní (Přijímat cookies)
+cookies.default.deny=Defaultní (Nepřijímat cookies)
+cookies.default.warn=Defaultní (Před přijmutím cookie zobrazit varování)
+cookies.host.session=Přijímat cookies sezení z %S
+cookies.host.accept=Přijímat cookies z %S
+cookies.host.reject=Nepřijímat cookies z %S
+cookies.edit.invalidname=Jméno cookie je nesprávné
+cookies.edit.invalidhost=Hostitel cookie je nesprávný
+cookies.edit.invalidpath=Cesta ke cookie je nesprávná
+cookies.header.name=Název
+cookies.header.value=Hodnota
+cookies.header.domain=Doména
+cookies.header.size=Velikost
+cookies.header.path=Cesta
+cookies.header.expires=Vyprší
+cookies.header.security=Bezpečnost
+cookies.header.status=Stav
+cookies.header.httponly=HttpOnly
+cookies.header.name.tooltip=Název
+cookies.header.value.tooltip=Hodnota
+cookies.header.domain.tooltip=Doména
+cookies.header.size.tooltip=Velikost
+cookies.header.path.tooltip=Cesta
+cookies.header.expires.tooltip=Vyprší
+cookies.header.security.tooltip=Bezpečnost
+cookies.header.status.tooltip=Stav
+cookies.header.httponly.tooltip=Indikuje, zda se jedná o cookie pouze pro HTTP
+cookies.netinfo.Received_Cookies=Přijaté cookies
+cookies.netinfo.Sent_Cookies=Odeslané cookies
+cookies.Path_Filter=Filtr cesty
+cookies.menu.Cookies=Cookies
+cookies.export.Export_All_Cookies=Exportovat všechny cookies
+cookies.export.Export_All_Cookies_Tooltip=Exportovat všechny cookies z prohlížeče do souboru cookies.txt
+cookies.export.Export_For_Site=Exportovat cookies pro tento web...
+cookies.export.Export_For_Site_Tooltip=Exportovat cookies pro tento web do souboru cookies.txt
+cookies.message.There_is_no_active_page=Žádná stránka není aktivní.
+cookies.Break_On_Cookie=Pozastavit při změně cookie
+cookies.Disable_Break_On_Cookie=Vypnout pozastavení při změně cookie
+cookies.Cookie_Breakpoints=Cookie breakpointy
+cookies.menu.Break_On_Cookie=Pozastavit při cookie '%S'
+cookies.menu.tooltip.Break_On_Cookie=Pozastavit při '%S' pokud je odstraněna či změněna
+cookies.menu.Edit_Breakpoint_Condition=Upravit podmínky breakpointu
+cookies.Breakpoint_condition_evaluation_fails=Vyhodnocení podmínek breakpointu selhalo
+cookies.RemoveAll=Odstranit cookies
+cookies.Create=Vytvořit cookie
+cookies.Tools=Nástroje
+cookies.ToolsTooltip=Nástroje
+cookies.ViewAll=Zobrazit všechny cookies...
+cookies.ViewAllTooltip=Otevřít správce cookies
+cookies.ViewExceptions=Nastavení jednotlivých webů...
+cookies.ViewExceptionsTooltip=Zobrazit seznam povolených či zakázaných webů
+cookies.Help=Nápověda
+cookies.HelpTooltip=Nápověda pro Firecookie
+cookies.About=O Firecookie...
+cookies.AboutTooltip=Informace o Firecookie
+cookies.Filter=Filtr
+cookies.FilterTooltip=Filtruje seznam cookies dle zadaných podmínek
+cookies.filter.byPath=Filtrovat cookie podle cesty
+cookies.filter.byPathTooltip=Zobrazit pouze cookies, které se shodují s aktuální cestou
+cookies.filter.showRejectedCookies=Zobrazit odmítnuté cookies
+cookies.filter.showRejectedCookiesTooltip=Zobrazí v seznamu také odmítnuté cookies
+cookies.edit.title=Upravit cookies
+cookies.edit.name.label=Jméno:
+cookies.edit.domain.label=Host:
+cookies.edit.path.label=Cesta:
+cookies.edit.expire.label=Platnost:
+cookies.edit.value.label=Hodnota:
+cookies.edit.secure.label=Bezpečná cookie
+cookies.edit.httponly.label=Pouze HTTP
+cookies.edit.session.label=Sezení
