--- a/extension/locale/es-ES/cookies.properties
+++ b/extension/locale/es-ES/cookies.properties
@@ -1,116 +1,116 @@
 extensions.firecookie@janodvarko.cz.description=Gestor de cookies para Firebug. Firebug debe estar instalado para usar esta extensión.
-firecookie.Panel=Cookies
-firecookie.Session=Sesión
-firecookie.AllowGlobally=Aceptar cookies de sitios web
-firecookie.BlockCurrent=Bloquear %S
-firecookie.LogEvents=Mostrar logs en la consola
-firecookie.clearWhenDeny=Limpiar las cookies al rechazar
-firecookie.Cut=Cortar
-firecookie.Copy=Copiar
-firecookie.CopyAll=Copiar todo
-firecookie.Paste=Pegar
-firecookie.Delete=Eliminar
-firecookie.Edit=Editar
-firecookie.Accept=Aceptar
-firecookie.header.Reset_Header=Restablecer Cabecera
-firecookie.Intro=Puedes especificar qué sitios web pueden utilizar cookies siempre y cuáles nunca.\nEscribe la dirección exacta del sitio que quieres gestionar y pulsa en Bloquear,\nPermitir durante la Sesión, o Permitir.
-firecookie.ExceptionsTitle=Excepciones - Cookies
-firecookie.confirm.removeall=¿Quieres eliminar todas las cookies de la lista?
-firecookie.removeall.tooltip=Eliminar todas las cookies de la lista.
-firecookie.createcookie.tooltip=Crear nueva cookie para %S
-firecookie.createcookie.defaultvalue=Valor
-firecookie.perm.manage.tooltip=Gestionar permisos de cookies para %S
-firecookie.console.cookiescleared=Todas las cookies han sido eliminadas.
-firecookie.console.cookiesrejected=Cookies rechazadas:
-firecookie.console.nocookiesreceived=No se han recibido cookies
-firecookie.console.cookie=Cookie
-firecookie.console.deleted=borrada
-firecookie.console.added=añadida
-firecookie.console.changed=cambiada
-firecookie.console.cleared=limpiada
-firecookie.domain.label=Dominio
-firecookie.secure.label=Segura
-firecookie.status.accepted=Aceptada
-firecookie.status.downgraded=Revertida
-firecookie.status.flagged=Marcada
-firecookie.status.rejected=Rechazada
-firecookie.info.valuetab.label=Valor
-firecookie.info.rawdatatab.Raw_Data=Datos Brutos
-firecookie.info.jsontab.JSON=JSON
-firecookie.info.xmltab.XML=XML
-firecookie.default.session=Por defecto (Aceptar cookies de sesión)
-firecookie.default.thirdPartySession=Por defecto (Aceptar cookies de sesión)
-firecookie.default.thirdParty=Por defecto (Aceptar cookies)
-firecookie.default.allow=Por defecto (Aceptar cookies)
-firecookie.default.deny=Por defecto (Rechazar cookies)
-firecookie.default.warn=Por defecto (Avisar antes de aceptar una cookie)
-firecookie.host.session=Aceptar cookies de sesión de %S
-firecookie.host.accept=Aceptar cookies de %S
-firecookie.host.reject=Rechazar cookies de %S
-firecookie.error.invalidName=El nombre de la cookie no es válido.
-firecookie.error.invalidURI=La URI del servidor no es válida.
-firecookie.header.name=Nombre
-firecookie.header.value=Valor
-firecookie.header.domain=Dominio
-firecookie.header.size=Tamaño
-firecookie.header.path=Ruta
-firecookie.header.expires=Expira
-firecookie.header.security=Seguridad
-firecookie.header.status=Estado
-firecookie.header.httponly=HttpOnly
-firecookie.header.name.tooltip=Nombre
-firecookie.header.value.tooltip=Valor
-firecookie.header.domain.tooltip=Dominio
-firecookie.header.size.tooltip=Tamaño
-firecookie.header.path.tooltip=Ruta
-firecookie.header.expires.tooltip=Expira
-firecookie.header.security.tooltip=Seguridad
-firecookie.header.status.tooltip=Estado
-firecookie.header.httponly.tooltip=Muestra si la cookie es sólo HTTP
+cookies.Panel=Cookies
+cookies.Session=Sesión
+cookies.AllowGlobally=Aceptar cookies de sitios web
+cookies.BlockCurrent=Bloquear %S
+cookies.LogEvents=Mostrar logs en la consola
+cookies.clearWhenDeny=Limpiar las cookies al rechazar
+cookies.Cut=Cortar
+cookies.Copy=Copiar
+cookies.CopyAll=Copiar todo
+cookies.Paste=Pegar
+cookies.Delete=Eliminar
+cookies.Edit=Editar
+cookies.Accept=Aceptar
+cookies.header.Reset_Header=Restablecer Cabecera
+cookies.Intro=Puedes especificar qué sitios web pueden utilizar cookies siempre y cuáles nunca.\nEscribe la dirección exacta del sitio que quieres gestionar y pulsa en Bloquear,\nPermitir durante la Sesión, o Permitir.
+cookies.ExceptionsTitle=Excepciones - Cookies
+cookies.confirm.removeall=¿Quieres eliminar todas las cookies de la lista?
+cookies.removeall.tooltip=Eliminar todas las cookies de la lista.
+cookies.createcookie.tooltip=Crear nueva cookie para %S
+cookies.createcookie.defaultvalue=Valor
+cookies.perm.manage.tooltip=Gestionar permisos de cookies para %S
+cookies.console.cookiescleared=Todas las cookies han sido eliminadas.
+cookies.console.cookiesrejected=Cookies rechazadas:
+cookies.console.nocookiesreceived=No se han recibido cookies
+cookies.console.cookie=Cookie
+cookies.console.deleted=borrada
+cookies.console.added=añadida
+cookies.console.changed=cambiada
+cookies.console.cleared=limpiada
+cookies.domain.label=Dominio
+cookies.secure.label=Segura
+cookies.status.accepted=Aceptada
+cookies.status.downgraded=Revertida
+cookies.status.flagged=Marcada
+cookies.status.rejected=Rechazada
+cookies.info.valuetab.label=Valor
+cookies.info.rawdatatab.Raw_Data=Datos Brutos
+cookies.info.jsontab.JSON=JSON
+cookies.info.xmltab.XML=XML
+cookies.default.session=Por defecto (Aceptar cookies de sesión)
+cookies.default.thirdPartySession=Por defecto (Aceptar cookies de sesión)
+cookies.default.thirdParty=Por defecto (Aceptar cookies)
+cookies.default.allow=Por defecto (Aceptar cookies)
+cookies.default.deny=Por defecto (Rechazar cookies)
+cookies.default.warn=Por defecto (Avisar antes de aceptar una cookie)
+cookies.host.session=Aceptar cookies de sesión de %S
+cookies.host.accept=Aceptar cookies de %S
+cookies.host.reject=Rechazar cookies de %S
+cookies.error.invalidName=El nombre de la cookie no es válido.
+cookies.error.invalidURI=La URI del servidor no es válida.
+cookies.header.name=Nombre
+cookies.header.value=Valor
+cookies.header.domain=Dominio
+cookies.header.size=Tamaño
+cookies.header.path=Ruta
+cookies.header.expires=Expira
+cookies.header.security=Seguridad
+cookies.header.status=Estado
+cookies.header.httponly=HttpOnly
+cookies.header.name.tooltip=Nombre
+cookies.header.value.tooltip=Valor
+cookies.header.domain.tooltip=Dominio
+cookies.header.size.tooltip=Tamaño
+cookies.header.path.tooltip=Ruta
+cookies.header.expires.tooltip=Expira
+cookies.header.security.tooltip=Seguridad
+cookies.header.status.tooltip=Estado
+cookies.header.httponly.tooltip=Muestra si la cookie es sólo HTTP
 cookies.modulemanager.description=Apoyo para la Monitorización de Cookies
 cookies.HostEnable=Habilitar panel de Cookies para %S
 cookies.HostDisable=Deshabilitar panel de Cookies para %S
 cookies.Permissions=Habilitar o Deshabilitar panel de Cookies
 cookies.PermissionsIntro=Elige sitios web donde el panel de Cookies estará habilitado o deshabilitado.
-firecookie.edit.invalidname=El nombre de la cookie no es válido.
-firecookie.edit.invalidhost=El host de la cookie no es válido.
-firecookie.edit.invalidpath=La ruta de la cookie no es válida.
-firecookie.SystemPages=Páginas de Sistema
-firecookie.LocalFiles=Archivos Locales
-firecookie.netinfo.Received_Cookies=Cookies Recibidas
-firecookie.netinfo.Sent_Cookies=Cookies Enviadas
-firecookie.Path_Filter=Filtro por Ruta
-firecookie.menu.Cookies=Cookies
-firecookie.export.Export_All_Cookies=Exportar todas las Cookies...
-firecookie.export.Export_All_Cookies_Tooltip=Exportar todas las cookies del navegador a archivo cookies.txt
-firecookie.export.Export_For_Site=Exportar Cookies Para Este Sitio...
-firecookie.export.Export_For_Site_Tooltip=Exportar cookies para %S a archivo cookies.txt
-firecookie.message.There_is_no_active_page=No hay página activa.
-firecookie.RemoveAll=Eliminar para este sitio
-firecookie.Create=Crear Cookie
-firecookie.ViewAll=Mostrar todas las Cookies...
-firecookie.ViewAllTooltip=Abrir Gestor de Cookies
-firecookie.ViewExceptions=Permisos para sitios web
-firecookie.ViewExceptionsTooltip=Lista de los sitios web permitidos o prohibidos
-firecookie.Tools=Herramientas
-firecookie.ToolsTooltip=Herramientas
-firecookie.Help=Ayuda
-firecookie.HelpTooltip=Ayuda de Firecookie
-firecookie.About=Acerca de...
-firecookie.AboutTooltip=Acerca de Firecookie
-firecookie.edit.title=Editar Cookie
-firecookie.edit.group.title=Detalles de la Cookie
-firecookie.edit.name.label=Nombre:
-firecookie.edit.value.label=Valor:
-firecookie.edit.domain.label=Servidor:
-firecookie.edit.path.label=Ruta:
-firecookie.edit.expire.label=Expira:
-firecookie.edit.session.label=Sesión
-firecookie.edit.secure.label=Cookie segura
-firecookie.edit.httponly.label=HTTP Only
-firecookie.Filter=Filtro
-firecookie.FilterTooltip=Usa estas opciones para filtrar la lista de cookies
-firecookie.filter.byPath=Filtrar Cookies por Ruta
-firecookie.filter.byPathTooltip=Mostrar sólo las cookies que coincidan con la ruta actual
-firecookie.filter.showRejectedCookies=Mostrar Cookies Rechazadas
-firecookie.filter.showRejectedCookiesTooltip=Mostrar en la lista también las cookies rechazadas
+cookies.edit.invalidname=El nombre de la cookie no es válido.
+cookies.edit.invalidhost=El host de la cookie no es válido.
+cookies.edit.invalidpath=La ruta de la cookie no es válida.
+cookies.SystemPages=Páginas de Sistema
+cookies.LocalFiles=Archivos Locales
+cookies.netinfo.Received_Cookies=Cookies Recibidas
+cookies.netinfo.Sent_Cookies=Cookies Enviadas
+cookies.Path_Filter=Filtro por Ruta
+cookies.menu.Cookies=Cookies
+cookies.export.Export_All_Cookies=Exportar todas las Cookies...
+cookies.export.Export_All_Cookies_Tooltip=Exportar todas las cookies del navegador a archivo cookies.txt
+cookies.export.Export_For_Site=Exportar Cookies Para Este Sitio...
+cookies.export.Export_For_Site_Tooltip=Exportar cookies para %S a archivo cookies.txt
+cookies.message.There_is_no_active_page=No hay página activa.
+cookies.RemoveAll=Eliminar para este sitio
+cookies.Create=Crear Cookie
+cookies.ViewAll=Mostrar todas las Cookies...
+cookies.ViewAllTooltip=Abrir Gestor de Cookies
+cookies.ViewExceptions=Permisos para sitios web
+cookies.ViewExceptionsTooltip=Lista de los sitios web permitidos o prohibidos
+cookies.Tools=Herramientas
+cookies.ToolsTooltip=Herramientas
+cookies.Help=Ayuda
+cookies.HelpTooltip=Ayuda de Firecookie
+cookies.About=Acerca de...
+cookies.AboutTooltip=Acerca de Firecookie
+cookies.edit.title=Editar Cookie
+cookies.edit.group.title=Detalles de la Cookie
+cookies.edit.name.label=Nombre:
+cookies.edit.value.label=Valor:
+cookies.edit.domain.label=Servidor:
+cookies.edit.path.label=Ruta:
+cookies.edit.expire.label=Expira:
+cookies.edit.session.label=Sesión
+cookies.edit.secure.label=Cookie segura
+cookies.edit.httponly.label=HTTP Only
+cookies.Filter=Filtro
+cookies.FilterTooltip=Usa estas opciones para filtrar la lista de cookies
+cookies.filter.byPath=Filtrar Cookies por Ruta
+cookies.filter.byPathTooltip=Mostrar sólo las cookies que coincidan con la ruta actual
+cookies.filter.showRejectedCookies=Mostrar Cookies Rechazadas
+cookies.filter.showRejectedCookiesTooltip=Mostrar en la lista también las cookies rechazadas
