--- a/extension/locale/fr/cookies.properties
+++ b/extension/locale/fr/cookies.properties
@@ -1,116 +1,116 @@
 extensions.firecookie@janodvarko.cz.description=Cookie manager for Firebug. Firebug has to be installed in order to use this extension.
-firecookie.Panel=Cookies
-firecookie.Session=Session
-firecookie.AllowGlobally=Accepter les cookies des autres sites
-firecookie.BlockCurrent=Bloquer %S
-firecookie.LogEvents=Afficher les journaux dans la console
-firecookie.clearWhenDeny=Effacer les cookies lors d'un refus
-firecookie.Cut=Couper
-firecookie.Copy=Copier
-firecookie.CopyAll=Tout copier
-firecookie.Paste=Coller
-firecookie.Delete=Supprimer
-firecookie.Edit=Modifier
-firecookie.Accept=Accepter
-firecookie.header.Reset_Header=Réinitialiser l'en-tête
-firecookie.Intro=Vous pouvez préciser quels sites Web sont toujours ou jamais autorisés à utiliser les cookies.\nTapez l'adresse exacte du site que vous souhaitez gérer, puis cliquez sur Bloquer,\nAutoriser la session, ou Autoriser.
-firecookie.ExceptionsTitle=Exceptions - Cookies
-firecookie.confirm.removeall=Souhaitez-vous retirer tous les cookies de la liste ?
-firecookie.removeall.tooltip=Retirer tous les cookies de la liste.
-firecookie.createcookie.tooltip=Créer un nouveau cookie pour %S
-firecookie.createcookie.defaultvalue=Value
-firecookie.perm.manage.tooltip=Gérer les permissions des cookies pour %S
-firecookie.console.cookiescleared=Tous les cookies ont été retirés.
-firecookie.console.cookiesrejected=Cookies rejetés :
-firecookie.console.nocookiesreceived=Aucun cookie reçu
-firecookie.console.cookie=Cookie
-firecookie.console.deleted=supprimé
-firecookie.console.added=ajouté
-firecookie.console.changed=modifié
-firecookie.console.cleared=effacé
-firecookie.domain.label=Domaine
-firecookie.secure.label=Sécurisé
-firecookie.status.accepted=Accepté
-firecookie.status.downgraded=Remis à une version antérieure
-firecookie.status.flagged=Marqué
-firecookie.status.rejected=Rejeté
-firecookie.info.valuetab.label=Valeur
-firecookie.info.rawdatatab.Raw_Data=Données brutes
-firecookie.info.jsontab.JSON=JSON
-firecookie.info.xmltab.XML=XML
-firecookie.default.session=Par défaut (Accepter les cookies de session)
-firecookie.default.thirdPartySession=Par défaut (Accepter les cookies de session)
-firecookie.default.thirdParty=Par défaut (Accepter les cookies)
-firecookie.default.allow=Par défaut (Accepter les cookies)
-firecookie.default.deny=Par défaut (Refuser les cookies)
-firecookie.default.warn=Par défaut (Avertir avant d'accepter les cookies)
-firecookie.host.session=Accepter les cookies de session de %S
-firecookie.host.accept=Accepter les cookies de %S
-firecookie.host.reject=Refuser les cookies de %S
-firecookie.error.invalidName=Le nom du cookie n'est pas valide
-firecookie.error.invalidURI=L'hôte URI n'est pas valide
-firecookie.header.name=Nom
-firecookie.header.value=Contenu
-firecookie.header.domain=Hôte
-firecookie.header.size=Taille
-firecookie.header.path=Chemin
-firecookie.header.expires=Expire
-firecookie.header.security=Sécurité
-firecookie.header.status=État
-firecookie.header.httponly=HttpOnly
-firecookie.header.name.tooltip=Nom
-firecookie.header.value.tooltip=Contenu
-firecookie.header.domain.tooltip=Hôte
-firecookie.header.size.tooltip=Taille
-firecookie.header.path.tooltip=Chemin
-firecookie.header.expires.tooltip=Expire
-firecookie.header.security.tooltip=Sécurité
-firecookie.header.status.tooltip=État
-firecookie.header.httponly.tooltip=Montre si le cookie est un cookie uniquement HTTP
+cookies.Panel=Cookies
+cookies.Session=Session
+cookies.AllowGlobally=Accepter les cookies des autres sites
+cookies.BlockCurrent=Bloquer %S
+cookies.LogEvents=Afficher les journaux dans la console
+cookies.clearWhenDeny=Effacer les cookies lors d'un refus
+cookies.Cut=Couper
+cookies.Copy=Copier
+cookies.CopyAll=Tout copier
+cookies.Paste=Coller
+cookies.Delete=Supprimer
+cookies.Edit=Modifier
+cookies.Accept=Accepter
+cookies.header.Reset_Header=Réinitialiser l'en-tête
+cookies.Intro=Vous pouvez préciser quels sites Web sont toujours ou jamais autorisés à utiliser les cookies.\nTapez l'adresse exacte du site que vous souhaitez gérer, puis cliquez sur Bloquer,\nAutoriser la session, ou Autoriser.
+cookies.ExceptionsTitle=Exceptions - Cookies
+cookies.confirm.removeall=Souhaitez-vous retirer tous les cookies de la liste ?
+cookies.removeall.tooltip=Retirer tous les cookies de la liste.
+cookies.createcookie.tooltip=Créer un nouveau cookie pour %S
+cookies.createcookie.defaultvalue=Value
+cookies.perm.manage.tooltip=Gérer les permissions des cookies pour %S
+cookies.console.cookiescleared=Tous les cookies ont été retirés.
+cookies.console.cookiesrejected=Cookies rejetés :
+cookies.console.nocookiesreceived=Aucun cookie reçu
+cookies.console.cookie=Cookie
+cookies.console.deleted=supprimé
+cookies.console.added=ajouté
+cookies.console.changed=modifié
+cookies.console.cleared=effacé
+cookies.domain.label=Domaine
+cookies.secure.label=Sécurisé
+cookies.status.accepted=Accepté
+cookies.status.downgraded=Remis à une version antérieure
+cookies.status.flagged=Marqué
+cookies.status.rejected=Rejeté
+cookies.info.valuetab.label=Valeur
+cookies.info.rawdatatab.Raw_Data=Données brutes
+cookies.info.jsontab.JSON=JSON
+cookies.info.xmltab.XML=XML
+cookies.default.session=Par défaut (Accepter les cookies de session)
+cookies.default.thirdPartySession=Par défaut (Accepter les cookies de session)
+cookies.default.thirdParty=Par défaut (Accepter les cookies)
+cookies.default.allow=Par défaut (Accepter les cookies)
+cookies.default.deny=Par défaut (Refuser les cookies)
+cookies.default.warn=Par défaut (Avertir avant d'accepter les cookies)
+cookies.host.session=Accepter les cookies de session de %S
+cookies.host.accept=Accepter les cookies de %S
+cookies.host.reject=Refuser les cookies de %S
+cookies.error.invalidName=Le nom du cookie n'est pas valide
+cookies.error.invalidURI=L'hôte URI n'est pas valide
+cookies.header.name=Nom
+cookies.header.value=Contenu
+cookies.header.domain=Hôte
+cookies.header.size=Taille
+cookies.header.path=Chemin
+cookies.header.expires=Expire
+cookies.header.security=Sécurité
+cookies.header.status=État
+cookies.header.httponly=HttpOnly
+cookies.header.name.tooltip=Nom
+cookies.header.value.tooltip=Contenu
+cookies.header.domain.tooltip=Hôte
+cookies.header.size.tooltip=Taille
+cookies.header.path.tooltip=Chemin
+cookies.header.expires.tooltip=Expire
+cookies.header.security.tooltip=Sécurité
+cookies.header.status.tooltip=État
+cookies.header.httponly.tooltip=Montre si le cookie est un cookie uniquement HTTP
 cookies.modulemanager.description=Support pour le contrôle des cookies
 cookies.HostEnable=Activer le panneau des cookies pour %S
 cookies.HostDisable=Désactiver le panneau des cookies pour %S
 cookies.Permissions=Activer ou désactiver le panneau des cookies
 cookies.PermissionsIntro=Choisir les sites Web dans lesquels le panneau des cookies sera activé ou désactivé.
-firecookie.edit.invalidname=Le nom du cookie n'est pas valide.
-firecookie.edit.invalidhost=L'hôte du cookie n'est pas valide.
-firecookie.edit.invalidpath=Le chemin du cookie n'est pas valide.
-firecookie.SystemPages=Pages système
-firecookie.LocalFiles=Fichiers locaux
-firecookie.netinfo.Received_Cookies=Cookies reçus
-firecookie.netinfo.Sent_Cookies=Cookies envoyés
-firecookie.Path_Filter=Filtre du chemin
-firecookie.menu.Cookies=Cookies
-firecookie.export.Export_All_Cookies=Exporter tous les cookies ...
-firecookie.export.Export_All_Cookies_Tooltip=Exporter tous les cookies du navigateur dans un fichier cookies.txt
-firecookie.export.Export_For_Site=Exporter les cookies pour ce site ...
-firecookie.export.Export_For_Site_Tooltip=Exporter les cookies pour %S dans un fichier cookies.txt
-firecookie.message.There_is_no_active_page=Il n'existe aucune page active
-firecookie.RemoveAll=Retirer du site
-firecookie.Create=Créer le cookie
-firecookie.ViewAll=Montrer tous les cookies...
-firecookie.ViewAllTooltip=Ouvrir le gestionnaire de téléchargements des cookies
-firecookie.ViewExceptions=Autorisation des sites Web
-firecookie.ViewExceptionsTooltip=Voir la liste des sites Web autorisés ou interdits
-firecookie.Tools=Outils
-firecookie.ToolsTooltip=Outils
-firecookie.Help=Aide
-firecookie.HelpTooltip=Aide pour Firecookie
-firecookie.About=À propos...
-firecookie.AboutTooltip=À propos de Firecookie
-firecookie.edit.title=Modifier le cookie
-firecookie.edit.group.title=Détails du cookie
-firecookie.edit.name.label=Nom :
-firecookie.edit.value.label=Contenu :
-firecookie.edit.domain.label=Hôte :
-firecookie.edit.path.label=Chemin :
-firecookie.edit.expire.label=Expire :
-firecookie.edit.session.label=Session
-firecookie.edit.secure.label=Sécuriser le cookie
-firecookie.edit.httponly.label=HTTP Only
-firecookie.Filter=Filtre
-firecookie.FilterTooltip=Utiliser les options données pour filtrer la liste de cookies.
-firecookie.filter.byPath=Filtrer les cookies par emplacement
-firecookie.filter.byPathTooltip=N&apos;afficher que les cookies qui correspondent à l&apos;emplacement actuel.
-firecookie.filter.showRejectedCookies=Afficher les cookies rejetés
-firecookie.filter.showRejectedCookiesTooltip=Afficher aussi les cookies rejetés dans la liste.
+cookies.edit.invalidname=Le nom du cookie n'est pas valide.
+cookies.edit.invalidhost=L'hôte du cookie n'est pas valide.
+cookies.edit.invalidpath=Le chemin du cookie n'est pas valide.
+cookies.SystemPages=Pages système
+cookies.LocalFiles=Fichiers locaux
+cookies.netinfo.Received_Cookies=Cookies reçus
+cookies.netinfo.Sent_Cookies=Cookies envoyés
+cookies.Path_Filter=Filtre du chemin
+cookies.menu.Cookies=Cookies
+cookies.export.Export_All_Cookies=Exporter tous les cookies ...
+cookies.export.Export_All_Cookies_Tooltip=Exporter tous les cookies du navigateur dans un fichier cookies.txt
+cookies.export.Export_For_Site=Exporter les cookies pour ce site ...
+cookies.export.Export_For_Site_Tooltip=Exporter les cookies pour %S dans un fichier cookies.txt
+cookies.message.There_is_no_active_page=Il n'existe aucune page active
+cookies.RemoveAll=Retirer du site
+cookies.Create=Créer le cookie
+cookies.ViewAll=Montrer tous les cookies...
+cookies.ViewAllTooltip=Ouvrir le gestionnaire de téléchargements des cookies
+cookies.ViewExceptions=Autorisation des sites Web
+cookies.ViewExceptionsTooltip=Voir la liste des sites Web autorisés ou interdits
+cookies.Tools=Outils
+cookies.ToolsTooltip=Outils
+cookies.Help=Aide
+cookies.HelpTooltip=Aide pour Firecookie
+cookies.About=À propos...
+cookies.AboutTooltip=À propos de Firecookie
+cookies.edit.title=Modifier le cookie
+cookies.edit.group.title=Détails du cookie
+cookies.edit.name.label=Nom :
+cookies.edit.value.label=Contenu :
+cookies.edit.domain.label=Hôte :
+cookies.edit.path.label=Chemin :
+cookies.edit.expire.label=Expire :
+cookies.edit.session.label=Session
+cookies.edit.secure.label=Sécuriser le cookie
+cookies.edit.httponly.label=HTTP Only
+cookies.Filter=Filtre
+cookies.FilterTooltip=Utiliser les options données pour filtrer la liste de cookies.
+cookies.filter.byPath=Filtrer les cookies par emplacement
+cookies.filter.byPathTooltip=N&apos;afficher que les cookies qui correspondent à l&apos;emplacement actuel.
+cookies.filter.showRejectedCookies=Afficher les cookies rejetés
+cookies.filter.showRejectedCookiesTooltip=Afficher aussi les cookies rejetés dans la liste.
