--- a/extension/locale/ja-JP/cookies.properties
+++ b/extension/locale/ja-JP/cookies.properties
@@ -1,126 +1,126 @@
 extensions.firecookie@janodvarko.cz.description=Firebug 用の Cookie マネージャ。この機能拡張を使うには、Firebug がインストールされていなければなりません。
-firecookie.Panel=Cookies
-firecookie.Session=セッション
-firecookie.AllowGlobally=サイトから Cookie を受け入れ
-firecookie.LogEvents=コンソールにログを表示
-firecookie.clearWhenDeny=拒否した Cookie をクリア
-firecookie.Cut=切り取り
-firecookie.Copy=コピー
-firecookie.CopyAll=すべてコピー
-firecookie.Paste=貼り付け
-firecookie.Delete=削除
-firecookie.Clear_Value=値をクリア
-firecookie.Edit=編集
-firecookie.Accept=受け入れ
-firecookie.header.Reset_Header=ヘッダをリセット
-firecookie.Intro=Cookie 使用の常時許可と常時禁止を、Web サイトごとに指定できます。\n制御したいサイトの厳密なアドレスを入力し、不許可、現在のセッションのみ、\n許可のいずれかをクリックしてください。
-firecookie.ExceptionsTitle=例外 - Cookies
+cookies.Panel=Cookies
+cookies.Session=セッション
+cookies.AllowGlobally=サイトから Cookie を受け入れ
+cookies.LogEvents=コンソールにログを表示
+cookies.clearWhenDeny=拒否した Cookie をクリア
+cookies.Cut=切り取り
+cookies.Copy=コピー
+cookies.CopyAll=すべてコピー
+cookies.Paste=貼り付け
+cookies.Delete=削除
+cookies.Clear_Value=値をクリア
+cookies.Edit=編集
+cookies.Accept=受け入れ
+cookies.header.Reset_Header=ヘッダをリセット
+cookies.Intro=Cookie 使用の常時許可と常時禁止を、Web サイトごとに指定できます。\n制御したいサイトの厳密なアドレスを入力し、不許可、現在のセッションのみ、\n許可のいずれかをクリックしてください。
+cookies.ExceptionsTitle=例外 - Cookies
 cookies.modulemanager.description=Cookie モニタリングのサポート
 cookies.HostEnable=%S で Cookies パネル有効化
 cookies.HostDisable=%S で Cookies パネル無効化
 cookies.Permissions=Cookies パネル有効化/無効化
 cookies.PermissionsIntro=Cookies パネルが有効化されたり無効化されたりするサイトを選んでください。
-firecookie.SystemPages=システムページ
-firecookie.LocalFiles=ローカルファイル
-firecookie.confirm.removeall=リスト内の Cookie を全て削除しますか?
-firecookie.confirm.removeallsession=リスト内のセッション Cookie を全て削除しますか?
-firecookie.msg.Do_not_show_this_message_again=ふたたびこのメッセージを表示しない
-firecookie.Confirm_cookie_removal=Cookie 削除を確認
-firecookie.removeall.tooltip=リスト内の Cookie を全て削除します。
-firecookie.Remove_Session_Cookies=セッション Cookie を削除
-firecookie.removeallsession.tooltip=リスト内のセッション Cookie を全て削除します。
-firecookie.createcookie.tooltip=%S に新規 Cookie を作成
-firecookie.createcookie.defaultvalue=内容
-firecookie.perm.manage.tooltip=%S の Cookie 可否設定を管理
-firecookie.console.cookiescleared=すべての Cookie は削除されました。
-firecookie.console.sessioncookiescleared=すべてのセッション Cookie は削除されました。
-firecookie.console.cookiesrejected=拒否された Cookie:
-firecookie.console.nocookiesreceived=Cookie の受信なし
-firecookie.console.cookie=Cookie
-firecookie.console.deleted=削除
-firecookie.console.added=追加
-firecookie.console.changed=変更
-firecookie.console.cleared=クリア
-firecookie.domain.label=ドメイン
-firecookie.secure.label=セキュア
-firecookie.status.accepted=Accepted
-firecookie.status.downgraded=Downgraded
-firecookie.status.flagged=Flagged
-firecookie.status.rejected=Rejected
-firecookie.info.valuetab.label=内容
-firecookie.info.rawdatatab.Raw_Data=生データ
-firecookie.info.jsontab.JSON=JSON
-firecookie.info.xmltab.XML=XML
-firecookie.default.session=デフォルト (セッション Cookie を受け入れ)
-firecookie.default.thirdPartySession=デフォルト (セッション Cookie を受け入れ)
-firecookie.default.thirdParty=デフォルト (Cookie を受け入れ)
-firecookie.default.allow=デフォルト (Cookie を受け入れ)
-firecookie.default.deny=デフォルト (Cookie を拒否)
-firecookie.default.warn=デフォルト (Cookie を受け入れる前に警告)
-firecookie.host.session=%S からのセッション Cookie を受け入れ
-firecookie.host.accept=%S からの Cookie を受け入れ
-firecookie.host.reject=%S からの Cookie を拒否
-firecookie.edit.invalidname=Cookie の名前が不正です。
-firecookie.edit.invalidhost=Cookie のホストが不正です。
-firecookie.edit.invalidpath=Cookie のパスが不正です。
-firecookie.header.name=名前
-firecookie.header.value=内容
-firecookie.header.domain=ドメイン
-firecookie.header.size=サイズ
-firecookie.header.path=パス
-firecookie.header.expires=有効期限
-firecookie.header.security=セキュリティ
-firecookie.header.status=ステータス
-firecookie.header.httponly=HTTP限定
-firecookie.header.name.tooltip=Cookie の名前
-firecookie.header.value.tooltip=Cookie に格納された値
-firecookie.header.domain.tooltip=Cookie の格納を行ったドメイン
-firecookie.header.size.tooltip=格納された Cookie のサイズ
-firecookie.header.path.tooltip=Cookie が有効になるディレクトリ
-firecookie.header.expires.tooltip=Cookie が失効する日付
-firecookie.header.security.tooltip=セキュア Cookie か否かを示します
-firecookie.header.status.tooltip=Cookie のステータス (downgraded, flagged...)
-firecookie.header.httponly.tooltip=Cookie が HTTP 限定 Cookie かどうかを示します
-firecookie.netinfo.Received_Cookies=Cookie 受信
-firecookie.netinfo.Sent_Cookies=Cookie 送信
-firecookie.Path_Filter=パスフィルタ
-firecookie.menu.Cookies=Cookies
-firecookie.export.Export_All_Cookies=すべての Cookie をエクスポート...
-firecookie.export.Export_All_Cookies_Tooltip=cookies.txt ファイルにすべてのブラウザ Cookie をエクスポート
-firecookie.export.Export_For_Site=このサイトの Cookie をエクスポート...
-firecookie.export.Export_For_Site_Tooltip=cookies.txt ファイルに %S の Cookie をエクスポート
-firecookie.message.There_is_no_active_page=アクティブページがありません。
-firecookie.Break_On_Cookie=Cookie 変更でブレーク
-firecookie.Disable_Break_On_Cookie=Cookie 変更でブレークを無効化
-firecookie.Cookie_Breakpoints=Cookie ブレークポイント
-firecookie.menu.Break_On_Cookie='%S' cookie でブレーク
-firecookie.menu.tooltip.Break_On_Cookie=削除または変更時に'%S'でブレークします。
-firecookie.menu.Edit_Breakpoint_Condition=ブレークポイント条件を編集
-firecookie.Breakpoint_condition_evaluation_fails=ブレークポイント条件の評価に失敗
-firecookie.RemoveAll=Cookie を削除
-firecookie.Create=Cookie を作成
-firecookie.Tools=ツール
-firecookie.ToolsTooltip=ツール
-firecookie.ViewAll=全ての Cookie を表示...
-firecookie.ViewAllTooltip=Cookie マネージャを開く
-firecookie.ViewExceptions=Web サイト許可...
-firecookie.ViewExceptionsTooltip=許可または拒否された Web サイトの一覧を表示
-firecookie.Help=ヘルプ
-firecookie.HelpTooltip=Firecookie ヘルプ
-firecookie.About=Firecookie について...
-firecookie.AboutTooltip=Firecookie について
-firecookie.Filter=フィルタ
-firecookie.FilterTooltip=Cookieリストをフィルタするとき指定されたオプションを使用します。
-firecookie.filter.byPath=現在のパスで Cookie をフィルタ
-firecookie.filter.byPathTooltip=現在のパスに合致する Cookie だけを表示します。
-firecookie.filter.showRejectedCookies=拒否された Cookie を表示
-firecookie.filter.showRejectedCookiesTooltip=拒否された Cookie もリストに表示します。
-firecookie.edit.title=Cookie を編集
-firecookie.edit.name.label=名前:
-firecookie.edit.domain.label=ホスト:
-firecookie.edit.path.label=パス:
-firecookie.edit.expire.label=有効期限:
-firecookie.edit.value.label=値:
-firecookie.edit.secure.label=セキュア Cookie
-firecookie.edit.httponly.label=HTTP Only
-firecookie.edit.session.label=セッション
+cookies.SystemPages=システムページ
+cookies.LocalFiles=ローカルファイル
+cookies.confirm.removeall=リスト内の Cookie を全て削除しますか?
+cookies.confirm.removeallsession=リスト内のセッション Cookie を全て削除しますか?
+cookies.msg.Do_not_show_this_message_again=ふたたびこのメッセージを表示しない
+cookies.Confirm_cookie_removal=Cookie 削除を確認
+cookies.removeall.tooltip=リスト内の Cookie を全て削除します。
+cookies.Remove_Session_Cookies=セッション Cookie を削除
+cookies.removeallsession.tooltip=リスト内のセッション Cookie を全て削除します。
+cookies.createcookie.tooltip=%S に新規 Cookie を作成
+cookies.createcookie.defaultvalue=内容
+cookies.perm.manage.tooltip=%S の Cookie 可否設定を管理
+cookies.console.cookiescleared=すべての Cookie は削除されました。
+cookies.console.sessioncookiescleared=すべてのセッション Cookie は削除されました。
+cookies.console.cookiesrejected=拒否された Cookie:
+cookies.console.nocookiesreceived=Cookie の受信なし
+cookies.console.cookie=Cookie
+cookies.console.deleted=削除
+cookies.console.added=追加
+cookies.console.changed=変更
+cookies.console.cleared=クリア
+cookies.domain.label=ドメイン
+cookies.secure.label=セキュア
+cookies.status.accepted=Accepted
+cookies.status.downgraded=Downgraded
+cookies.status.flagged=Flagged
+cookies.status.rejected=Rejected
+cookies.info.valuetab.label=内容
+cookies.info.rawdatatab.Raw_Data=生データ
+cookies.info.jsontab.JSON=JSON
+cookies.info.xmltab.XML=XML
+cookies.default.session=デフォルト (セッション Cookie を受け入れ)
+cookies.default.thirdPartySession=デフォルト (セッション Cookie を受け入れ)
+cookies.default.thirdParty=デフォルト (Cookie を受け入れ)
+cookies.default.allow=デフォルト (Cookie を受け入れ)
+cookies.default.deny=デフォルト (Cookie を拒否)
+cookies.default.warn=デフォルト (Cookie を受け入れる前に警告)
+cookies.host.session=%S からのセッション Cookie を受け入れ
+cookies.host.accept=%S からの Cookie を受け入れ
+cookies.host.reject=%S からの Cookie を拒否
+cookies.edit.invalidname=Cookie の名前が不正です。
+cookies.edit.invalidhost=Cookie のホストが不正です。
+cookies.edit.invalidpath=Cookie のパスが不正です。
+cookies.header.name=名前
+cookies.header.value=内容
+cookies.header.domain=ドメイン
+cookies.header.size=サイズ
+cookies.header.path=パス
+cookies.header.expires=有効期限
+cookies.header.security=セキュリティ
+cookies.header.status=ステータス
+cookies.header.httponly=HTTP限定
+cookies.header.name.tooltip=Cookie の名前
+cookies.header.value.tooltip=Cookie に格納された値
+cookies.header.domain.tooltip=Cookie の格納を行ったドメイン
+cookies.header.size.tooltip=格納された Cookie のサイズ
+cookies.header.path.tooltip=Cookie が有効になるディレクトリ
+cookies.header.expires.tooltip=Cookie が失効する日付
+cookies.header.security.tooltip=セキュア Cookie か否かを示します
+cookies.header.status.tooltip=Cookie のステータス (downgraded, flagged...)
+cookies.header.httponly.tooltip=Cookie が HTTP 限定 Cookie かどうかを示します
+cookies.netinfo.Received_Cookies=Cookie 受信
+cookies.netinfo.Sent_Cookies=Cookie 送信
+cookies.Path_Filter=パスフィルタ
+cookies.menu.Cookies=Cookies
+cookies.export.Export_All_Cookies=すべての Cookie をエクスポート...
+cookies.export.Export_All_Cookies_Tooltip=cookies.txt ファイルにすべてのブラウザ Cookie をエクスポート
+cookies.export.Export_For_Site=このサイトの Cookie をエクスポート...
+cookies.export.Export_For_Site_Tooltip=cookies.txt ファイルに %S の Cookie をエクスポート
+cookies.message.There_is_no_active_page=アクティブページがありません。
+cookies.Break_On_Cookie=Cookie 変更でブレーク
+cookies.Disable_Break_On_Cookie=Cookie 変更でブレークを無効化
+cookies.Cookie_Breakpoints=Cookie ブレークポイント
+cookies.menu.Break_On_Cookie='%S' cookie でブレーク
+cookies.menu.tooltip.Break_On_Cookie=削除または変更時に'%S'でブレークします。
+cookies.menu.Edit_Breakpoint_Condition=ブレークポイント条件を編集
+cookies.Breakpoint_condition_evaluation_fails=ブレークポイント条件の評価に失敗
+cookies.RemoveAll=Cookie を削除
+cookies.Create=Cookie を作成
+cookies.Tools=ツール
+cookies.ToolsTooltip=ツール
+cookies.ViewAll=全ての Cookie を表示...
+cookies.ViewAllTooltip=Cookie マネージャを開く
+cookies.ViewExceptions=Web サイト許可...
+cookies.ViewExceptionsTooltip=許可または拒否された Web サイトの一覧を表示
+cookies.Help=ヘルプ
+cookies.HelpTooltip=Firecookie ヘルプ
+cookies.About=Firecookie について...
+cookies.AboutTooltip=Firecookie について
+cookies.Filter=フィルタ
+cookies.FilterTooltip=Cookieリストをフィルタするとき指定されたオプションを使用します。
+cookies.filter.byPath=現在のパスで Cookie をフィルタ
+cookies.filter.byPathTooltip=現在のパスに合致する Cookie だけを表示します。
+cookies.filter.showRejectedCookies=拒否された Cookie を表示
+cookies.filter.showRejectedCookiesTooltip=拒否された Cookie もリストに表示します。
+cookies.edit.title=Cookie を編集
+cookies.edit.name.label=名前:
+cookies.edit.domain.label=ホスト:
+cookies.edit.path.label=パス:
+cookies.edit.expire.label=有効期限:
+cookies.edit.value.label=値:
+cookies.edit.secure.label=セキュア Cookie
+cookies.edit.httponly.label=HTTP Only
+cookies.edit.session.label=セッション
