--- a/extension/locale/pt-PT/cookies.properties
+++ b/extension/locale/pt-PT/cookies.properties
@@ -1,116 +1,116 @@
 extensions.firecookie@janodvarko.cz.description=Gestor de cookies para o Firebug. O Firebug tem de estar instalado para poder usar esta extensão.
-firecookie.Panel=Cookies
-firecookie.Session=Sessão
-firecookie.AllowGlobally=Aceitar cookies dos sítios Web
-firecookie.BlockCurrent=Bloquear %S
-firecookie.LogEvents=Exibir registos na consola
-firecookie.clearWhenDeny=Limpar cookies quando negadas
-firecookie.Cut=Cortar
-firecookie.Copy=Copiar
-firecookie.CopyAll=Copiar Todas
-firecookie.Paste=Colar
-firecookie.Delete=Eliminar
-firecookie.Edit=Editar
-firecookie.Accept=Aceitar
-firecookie.header.Reset_Header=Reiniciar Cabeçalho
-firecookie.Intro=É possível especificar que sítios Web permitem sempre ou nunca usar cookies.\nInsira o endereço exacto do sítio Web que pretende gerir e depois clique em\nBloquear, Permitir para a Sessão ou Permitir.
-firecookie.ExceptionsTitle=Excepções - Cookies
-firecookie.confirm.removeall=Pretende remover todas as cookies na lista?
-firecookie.removeall.tooltip=Remover todas as cookies na lista.
-firecookie.createcookie.tooltip=Criar uma nova cookie para %S
-firecookie.createcookie.defaultvalue=Valor
-firecookie.perm.manage.tooltip=Gerir permissões da cookie para %S
-firecookie.console.cookiescleared=Todas as cookies foram removidas.
-firecookie.console.cookiesrejected=Cookies rejeitadas:
-firecookie.console.nocookiesreceived=Nenhuma cookie recebida
-firecookie.console.cookie=Cookie
-firecookie.console.deleted=eliminada
-firecookie.console.added=adicionada
-firecookie.console.changed=alterada
-firecookie.console.cleared=limpa
-firecookie.domain.label=Domínio
-firecookie.secure.label=Segura
-firecookie.status.accepted=Aceite
-firecookie.status.downgraded=Downgraded
-firecookie.status.flagged=Marcada
-firecookie.status.rejected=Rejeitada
-firecookie.info.valuetab.label=Valor
-firecookie.info.rawdatatab.Raw_Data=Dados Raw
-firecookie.info.jsontab.JSON=JSON
-firecookie.info.xmltab.XML=XML
-firecookie.default.session=Por defeito (Aceitar cookies de sessão)
-firecookie.default.thirdPartySession=Por defeito (Aceitar cookies de sessão)
-firecookie.default.thirdParty=Por defeito (Aceitar cookies)
-firecookie.default.allow=Por defeito (Aceitar cookies)
-firecookie.default.deny=Por defeito (Negar cookies)
-firecookie.default.warn=Por defeito (Avisar antes de aceitar uma cookie)
-firecookie.host.session=Aceitar cookies de sessão de %S
-firecookie.host.accept=Aceitar cookies de %S
-firecookie.host.reject=Negar cookies de %S
-firecookie.error.invalidName=Nome da cookie não é válido.
-firecookie.error.invalidURI=URI do servidor não é válido.
-firecookie.header.name=Nome
-firecookie.header.value=Valor
-firecookie.header.domain=Domínio
-firecookie.header.size=Tamanho
-firecookie.header.path=Caminho
-firecookie.header.expires=Expira
-firecookie.header.security=Segurança
-firecookie.header.status=Estado
-firecookie.header.httponly=HttpOnly
-firecookie.header.name.tooltip=Nome da cookie
-firecookie.header.value.tooltip=Valor armazenado para a cookie
-firecookie.header.domain.tooltip=Domínio que armazenou a cookie
-firecookie.header.size.tooltip=Tamanho da cookie armazenada
-firecookie.header.path.tooltip=Directório onde a cookie está activa
-firecookie.header.expires.tooltip=Data de expiração da cookie
-firecookie.header.security.tooltip=Mostra se a cookie é segura ou não
-firecookie.header.status.tooltip=Estado da cookie (downgraded, marcada...)
-firecookie.header.httponly.tooltip=Mostra se a cookie é apenas HTTP
+cookies.Panel=Cookies
+cookies.Session=Sessão
+cookies.AllowGlobally=Aceitar cookies dos sítios Web
+cookies.BlockCurrent=Bloquear %S
+cookies.LogEvents=Exibir registos na consola
+cookies.clearWhenDeny=Limpar cookies quando negadas
+cookies.Cut=Cortar
+cookies.Copy=Copiar
+cookies.CopyAll=Copiar Todas
+cookies.Paste=Colar
+cookies.Delete=Eliminar
+cookies.Edit=Editar
+cookies.Accept=Aceitar
+cookies.header.Reset_Header=Reiniciar Cabeçalho
+cookies.Intro=É possível especificar que sítios Web permitem sempre ou nunca usar cookies.\nInsira o endereço exacto do sítio Web que pretende gerir e depois clique em\nBloquear, Permitir para a Sessão ou Permitir.
+cookies.ExceptionsTitle=Excepções - Cookies
+cookies.confirm.removeall=Pretende remover todas as cookies na lista?
+cookies.removeall.tooltip=Remover todas as cookies na lista.
+cookies.createcookie.tooltip=Criar uma nova cookie para %S
+cookies.createcookie.defaultvalue=Valor
+cookies.perm.manage.tooltip=Gerir permissões da cookie para %S
+cookies.console.cookiescleared=Todas as cookies foram removidas.
+cookies.console.cookiesrejected=Cookies rejeitadas:
+cookies.console.nocookiesreceived=Nenhuma cookie recebida
+cookies.console.cookie=Cookie
+cookies.console.deleted=eliminada
+cookies.console.added=adicionada
+cookies.console.changed=alterada
+cookies.console.cleared=limpa
+cookies.domain.label=Domínio
+cookies.secure.label=Segura
+cookies.status.accepted=Aceite
+cookies.status.downgraded=Downgraded
+cookies.status.flagged=Marcada
+cookies.status.rejected=Rejeitada
+cookies.info.valuetab.label=Valor
+cookies.info.rawdatatab.Raw_Data=Dados Raw
+cookies.info.jsontab.JSON=JSON
+cookies.info.xmltab.XML=XML
+cookies.default.session=Por defeito (Aceitar cookies de sessão)
+cookies.default.thirdPartySession=Por defeito (Aceitar cookies de sessão)
+cookies.default.thirdParty=Por defeito (Aceitar cookies)
+cookies.default.allow=Por defeito (Aceitar cookies)
+cookies.default.deny=Por defeito (Negar cookies)
+cookies.default.warn=Por defeito (Avisar antes de aceitar uma cookie)
+cookies.host.session=Aceitar cookies de sessão de %S
+cookies.host.accept=Aceitar cookies de %S
+cookies.host.reject=Negar cookies de %S
+cookies.error.invalidName=Nome da cookie não é válido.
+cookies.error.invalidURI=URI do servidor não é válido.
+cookies.header.name=Nome
+cookies.header.value=Valor
+cookies.header.domain=Domínio
+cookies.header.size=Tamanho
+cookies.header.path=Caminho
+cookies.header.expires=Expira
+cookies.header.security=Segurança
+cookies.header.status=Estado
+cookies.header.httponly=HttpOnly
+cookies.header.name.tooltip=Nome da cookie
+cookies.header.value.tooltip=Valor armazenado para a cookie
+cookies.header.domain.tooltip=Domínio que armazenou a cookie
+cookies.header.size.tooltip=Tamanho da cookie armazenada
+cookies.header.path.tooltip=Directório onde a cookie está activa
+cookies.header.expires.tooltip=Data de expiração da cookie
+cookies.header.security.tooltip=Mostra se a cookie é segura ou não
+cookies.header.status.tooltip=Estado da cookie (downgraded, marcada...)
+cookies.header.httponly.tooltip=Mostra se a cookie é apenas HTTP
 cookies.modulemanager.description=Suporte para Monitorização de Cookies
 cookies.HostEnable=Activar o Painel de cookies para %S
 cookies.HostDisable=Desactivar Painel de Cookies para %S
 cookies.Permissions=Activar ou Desactivar Painel de cookies
 cookies.PermissionsIntro=Seleccionar sítios Web onde o painel de cookies estará activo ou inactivo.
-firecookie.edit.invalidname=O nome da cookie não é válido.
-firecookie.edit.invalidhost=O servidor da cookie não é válido.
-firecookie.edit.invalidpath=O caminho da cookie não é válido.
-firecookie.SystemPages=Páginas de Sistema
-firecookie.LocalFiles=Ficheiros Locais
-firecookie.netinfo.Received_Cookies=Cookies Recebidas
-firecookie.netinfo.Sent_Cookies=Cookies Enviadas
-firecookie.Path_Filter=Filtro de Caminhos
-firecookie.menu.Cookies=Cookies
-firecookie.export.Export_All_Cookies=Exportar Todas as Cookies...
-firecookie.export.Export_All_Cookies_Tooltip=Exportar todas as cookies do navegador para um ficheiro cookies.txt
-firecookie.export.Export_For_Site=Exportar Cookies deste Sítio Web...
-firecookie.export.Export_For_Site_Tooltip=Exportar cookies de %S para um ficheiro cookies.txt
-firecookie.message.There_is_no_active_page=Não existe qualquer página activa.
-firecookie.RemoveAll=Remover Cookies
-firecookie.Create=Criar Cookie
-firecookie.ViewAll=Exibir Todas as Cookies...
-firecookie.ViewAllTooltip=Abrir o Gestor de Cookies
-firecookie.ViewExceptions=Permissões dos Sítios Web...
-firecookie.ViewExceptionsTooltip=Ver lista de sítios Web permitidos ou proibidos
-firecookie.Tools=Ferramentas
-firecookie.ToolsTooltip=Ferramentas
-firecookie.Help=Ajuda
-firecookie.HelpTooltip=Ajuda para o Firecookie
-firecookie.About=Sobre...
-firecookie.AboutTooltip=Sobre o Firecookie
-firecookie.edit.title=Editar Cookie
-firecookie.edit.group.title=Detalhes da Cookie
-firecookie.edit.name.label=Nome:
-firecookie.edit.value.label=Valor:
-firecookie.edit.domain.label=Servidor:
-firecookie.edit.path.label=Caminho:
-firecookie.edit.expire.label=Expira:
-firecookie.edit.session.label=Sessão
-firecookie.edit.secure.label=Cookie Segura
-firecookie.edit.httponly.label=Apenas HTTP
-firecookie.Filter=Filtro
-firecookie.FilterTooltip=Usar opções fornecidas para filtrar a lista de cookies.
-firecookie.filter.byPath=Filtrar Cookies Pelo Caminho Corrente
-firecookie.filter.byPathTooltip=Exibir apenas cookies que correspondam ao caminho corrente.
-firecookie.filter.showRejectedCookies=Exibir Cookies Rejeitadas
-firecookie.filter.showRejectedCookiesTooltip=Exibir na lista até as cookies rejeitadas
+cookies.edit.invalidname=O nome da cookie não é válido.
+cookies.edit.invalidhost=O servidor da cookie não é válido.
+cookies.edit.invalidpath=O caminho da cookie não é válido.
+cookies.SystemPages=Páginas de Sistema
+cookies.LocalFiles=Ficheiros Locais
+cookies.netinfo.Received_Cookies=Cookies Recebidas
+cookies.netinfo.Sent_Cookies=Cookies Enviadas
+cookies.Path_Filter=Filtro de Caminhos
+cookies.menu.Cookies=Cookies
+cookies.export.Export_All_Cookies=Exportar Todas as Cookies...
+cookies.export.Export_All_Cookies_Tooltip=Exportar todas as cookies do navegador para um ficheiro cookies.txt
+cookies.export.Export_For_Site=Exportar Cookies deste Sítio Web...
+cookies.export.Export_For_Site_Tooltip=Exportar cookies de %S para um ficheiro cookies.txt
+cookies.message.There_is_no_active_page=Não existe qualquer página activa.
+cookies.RemoveAll=Remover Cookies
+cookies.Create=Criar Cookie
+cookies.ViewAll=Exibir Todas as Cookies...
+cookies.ViewAllTooltip=Abrir o Gestor de Cookies
+cookies.ViewExceptions=Permissões dos Sítios Web...
+cookies.ViewExceptionsTooltip=Ver lista de sítios Web permitidos ou proibidos
+cookies.Tools=Ferramentas
+cookies.ToolsTooltip=Ferramentas
+cookies.Help=Ajuda
+cookies.HelpTooltip=Ajuda para o Firecookie
+cookies.About=Sobre...
+cookies.AboutTooltip=Sobre o Firecookie
+cookies.edit.title=Editar Cookie
+cookies.edit.group.title=Detalhes da Cookie
+cookies.edit.name.label=Nome:
+cookies.edit.value.label=Valor:
+cookies.edit.domain.label=Servidor:
+cookies.edit.path.label=Caminho:
+cookies.edit.expire.label=Expira:
+cookies.edit.session.label=Sessão
+cookies.edit.secure.label=Cookie Segura
+cookies.edit.httponly.label=Apenas HTTP
+cookies.Filter=Filtro
+cookies.FilterTooltip=Usar opções fornecidas para filtrar a lista de cookies.
+cookies.filter.byPath=Filtrar Cookies Pelo Caminho Corrente
+cookies.filter.byPathTooltip=Exibir apenas cookies que correspondam ao caminho corrente.
+cookies.filter.showRejectedCookies=Exibir Cookies Rejeitadas
+cookies.filter.showRejectedCookiesTooltip=Exibir na lista até as cookies rejeitadas
