--- a/extension/locale/ru/cookies.properties
+++ b/extension/locale/ru/cookies.properties
@@ -1,126 +1,126 @@
 extensions.firecookie@janodvarko.cz.description=Менеджер Cookies для Firebug. Firebug должен быть установлен для использования этого расширения.
-firecookie.Panel=Cookies
-firecookie.Session=Сессия
-firecookie.AllowGlobally=Принимать Cookie от сайтов
-firecookie.LogEvents=Показывать логи в консоли
-firecookie.clearWhenDeny=Очищать Cookie при запрете
-firecookie.Cut=Вырезать
-firecookie.Copy=Копировать
-firecookie.CopyAll=Скопировать все
-firecookie.Paste=Вставить
-firecookie.Delete=Удалить
-firecookie.Clear_Value=Очистить значение
-firecookie.Edit=Редактировать
-firecookie.Accept=Принять
-firecookie.header.Reset_Header=Сбросить заголовок
-firecookie.Intro=Вы можете указать каким сайтам разрешено или запрещено использовать Cookie.\nНапишите точный адрес сайта и нажмите Блокировать,\nРазрешить на сессию или Разрешить.
-firecookie.ExceptionsTitle=Исключения - Cookie
+cookies.Panel=Cookies
+cookies.Session=Сессия
+cookies.AllowGlobally=Принимать Cookie от сайтов
+cookies.LogEvents=Показывать логи в консоли
+cookies.clearWhenDeny=Очищать Cookie при запрете
+cookies.Cut=Вырезать
+cookies.Copy=Копировать
+cookies.CopyAll=Скопировать все
+cookies.Paste=Вставить
+cookies.Delete=Удалить
+cookies.Clear_Value=Очистить значение
+cookies.Edit=Редактировать
+cookies.Accept=Принять
+cookies.header.Reset_Header=Сбросить заголовок
+cookies.Intro=Вы можете указать каким сайтам разрешено или запрещено использовать Cookie.\nНапишите точный адрес сайта и нажмите Блокировать,\nРазрешить на сессию или Разрешить.
+cookies.ExceptionsTitle=Исключения - Cookie
 cookies.modulemanager.description=Поддержка мониторинга Cookie
 cookies.HostEnable=Включить панель Cookie для %S
 cookies.HostDisable=Отключить панель Cookie для %S
 cookies.Permissions=Включить или отключить панель Cookie
 cookies.PermissionsIntro=Выберите сайты, на которых панель Cookie будет включена или отключена
-firecookie.SystemPages=Системные страницы
-firecookie.LocalFiles=Локальные файлы
-firecookie.confirm.removeall=Вы желаете удалить все Cookie в списке?
-firecookie.confirm.removeallsession=Вы желаете удалить все Cookie сессии в списке?
-firecookie.msg.Do_not_show_this_message_again=Больше не показывать это сообщение
-firecookie.Confirm_cookie_removal=Подтверждать удаление Cookie
-firecookie.removeall.tooltip=Удалить все Cookie в списке.
-firecookie.Remove_Session_Cookies=Удалить Cookie сессии
-firecookie.removeallsession.tooltip=Удалить все Cookie сессии в списке
-firecookie.createcookie.tooltip=Создать Cookie для %S
-firecookie.createcookie.defaultvalue=Значение
-firecookie.perm.manage.tooltip=Управление разрешениями Cookie для %S
-firecookie.console.cookiescleared=Все Cookie были удалены
-firecookie.console.sessioncookiescleared=Все Cookie сессии были удалены
-firecookie.console.cookiesrejected=Отвергнутые Cookie:
-firecookie.console.nocookiesreceived=Нет полученных Cookie
-firecookie.console.cookie=Cookie
-firecookie.console.deleted=удалена
-firecookie.console.added=добавлена
-firecookie.console.changed=изменена
-firecookie.console.cleared=очищена
-firecookie.domain.label=Домен
-firecookie.secure.label=Безопасная
-firecookie.status.accepted=Принята
-firecookie.status.downgraded=Понижена
-firecookie.status.flagged=Помечена
-firecookie.status.rejected=Отвергнута
-firecookie.info.valuetab.label=Значение
-firecookie.info.rawdatatab.Raw_Data=Сырые данные
-firecookie.info.jsontab.JSON=JSON
-firecookie.info.xmltab.XML=XML
-firecookie.default.session=По умолчанию (Принимать Cookie сессии)
-firecookie.default.thirdPartySession=По умолчанию (Принимать Cookie сессии)
-firecookie.default.thirdParty=По умолчанию (Принимать Cookie)
-firecookie.default.allow=По умолчанию (Принимать Cookie)
-firecookie.default.deny=По умолчанию (Отвергать Cookie)
-firecookie.default.warn=По умолчанию (Предупреждать перед приёмом Cookie)
-firecookie.host.session=Принимать Cookie сессии от %S
-firecookie.host.accept=Принимать Cookie от %S
-firecookie.host.reject=Отвергать Cookie от %S
-firecookie.edit.invalidname=Ошибочное имя Cookie.
-firecookie.edit.invalidhost=Ошибочный хост Cookie.
-firecookie.edit.invalidpath=Ошибочный путь Cookie.
-firecookie.header.name=Имя
-firecookie.header.value=Значение
-firecookie.header.domain=Домен
-firecookie.header.size=Размер
-firecookie.header.path=Путь
-firecookie.header.expires=Истекает
-firecookie.header.security=Безопасность
-firecookie.header.status=Статус
-firecookie.header.httponly=Только HTTP
-firecookie.header.name.tooltip=Имя Cookie
-firecookie.header.value.tooltip=Сохранённое значение Cookie
-firecookie.header.domain.tooltip=Домен на котором хранится Cookie
-firecookie.header.size.tooltip=Размер сохранённой Cookie
-firecookie.header.path.tooltip=Директория в которой Cookie активна
-firecookie.header.expires.tooltip=Дата истечения Cookie
-firecookie.header.security.tooltip=Показывает безопасна Cookie или нет
-firecookie.header.status.tooltip=Статус Cookie (понижена, помечена...)
-firecookie.header.httponly.tooltip=Показывает если это только HTTP Cookie
-firecookie.netinfo.Received_Cookies=Принятые Cookie
-firecookie.netinfo.Sent_Cookies=Отправленные Cookie
-firecookie.Path_Filter=Фильтр пути
-firecookie.menu.Cookies=Cookies
-firecookie.export.Export_All_Cookies=Экспортировать все Cookie...
-firecookie.export.Export_All_Cookies_Tooltip=Экспортировать все Cookie браузера в файл cookies.txt
-firecookie.export.Export_For_Site=Экспортировать Cookie этого сайта...
-firecookie.export.Export_For_Site_Tooltip=Экспортировать Cookie для %S в файл cookies.txt
-firecookie.message.There_is_no_active_page=Активная страница отсутствует.
-firecookie.Break_On_Cookie=Останавливать при изменении Cookie
-firecookie.Disable_Break_On_Cookie=Отключить остановку при изменении Cookie
-firecookie.Cookie_Breakpoints=Точки останова Cookie
-firecookie.menu.Break_On_Cookie=Останавливать на Cookie '%S'
-firecookie.menu.tooltip.Break_On_Cookie=Останавливать на Cookie '%S' при удалении или изменении
-firecookie.menu.Edit_Breakpoint_Condition=Править условие точки останова
-firecookie.Breakpoint_condition_evaluation_fails=Ошибка валидации условия точки останова
-firecookie.RemoveAll=Удалить все Cookie
-firecookie.Create=Создать Cookie
-firecookie.Tools=Инструменты
-firecookie.ToolsTooltip=Инструменты
-firecookie.ViewAll=Показать все Cookie...
-firecookie.ViewAllTooltip=Открыть встроенный менеджер Cookie
-firecookie.ViewExceptions=Разрешения веб-сайтов
-firecookie.ViewExceptionsTooltip=Показать список разрешённых или запрещённых веб-сайтов
-firecookie.Help=Помощь
-firecookie.HelpTooltip=Помощь Firecookie
-firecookie.About=О расширении..
-firecookie.AboutTooltip=О Firecookie
-firecookie.Filter=Фильтр
-firecookie.FilterTooltip=Использовать данные опции для фильтрации списка Cookie
-firecookie.filter.byPath=Фильтровать Cookie по текущему пути
-firecookie.filter.byPathTooltip=Показывать только те Cookie, которые совпадают с текущим путём
-firecookie.filter.showRejectedCookies=Показывать отвергнутые Cookie
-firecookie.filter.showRejectedCookiesTooltip=Показывать даже отвергнутые Cookie в списке
-firecookie.edit.title=Редактировать Cookie
-firecookie.edit.name.label=Имя:
-firecookie.edit.domain.label=Хост:
-firecookie.edit.path.label=Путь:
-firecookie.edit.expire.label=Истекает:
-firecookie.edit.value.label=Значение:
-firecookie.edit.secure.label=Безопасная Cookie
-firecookie.edit.httponly.label=Только HTTP
-firecookie.edit.session.label=Сессия
+cookies.SystemPages=Системные страницы
+cookies.LocalFiles=Локальные файлы
+cookies.confirm.removeall=Вы желаете удалить все Cookie в списке?
+cookies.confirm.removeallsession=Вы желаете удалить все Cookie сессии в списке?
+cookies.msg.Do_not_show_this_message_again=Больше не показывать это сообщение
+cookies.Confirm_cookie_removal=Подтверждать удаление Cookie
+cookies.removeall.tooltip=Удалить все Cookie в списке.
+cookies.Remove_Session_Cookies=Удалить Cookie сессии
+cookies.removeallsession.tooltip=Удалить все Cookie сессии в списке
+cookies.createcookie.tooltip=Создать Cookie для %S
+cookies.createcookie.defaultvalue=Значение
+cookies.perm.manage.tooltip=Управление разрешениями Cookie для %S
+cookies.console.cookiescleared=Все Cookie были удалены
+cookies.console.sessioncookiescleared=Все Cookie сессии были удалены
+cookies.console.cookiesrejected=Отвергнутые Cookie:
+cookies.console.nocookiesreceived=Нет полученных Cookie
+cookies.console.cookie=Cookie
+cookies.console.deleted=удалена
+cookies.console.added=добавлена
+cookies.console.changed=изменена
+cookies.console.cleared=очищена
+cookies.domain.label=Домен
+cookies.secure.label=Безопасная
+cookies.status.accepted=Принята
+cookies.status.downgraded=Понижена
+cookies.status.flagged=Помечена
+cookies.status.rejected=Отвергнута
+cookies.info.valuetab.label=Значение
+cookies.info.rawdatatab.Raw_Data=Сырые данные
+cookies.info.jsontab.JSON=JSON
+cookies.info.xmltab.XML=XML
+cookies.default.session=По умолчанию (Принимать Cookie сессии)
+cookies.default.thirdPartySession=По умолчанию (Принимать Cookie сессии)
+cookies.default.thirdParty=По умолчанию (Принимать Cookie)
+cookies.default.allow=По умолчанию (Принимать Cookie)
+cookies.default.deny=По умолчанию (Отвергать Cookie)
+cookies.default.warn=По умолчанию (Предупреждать перед приёмом Cookie)
+cookies.host.session=Принимать Cookie сессии от %S
+cookies.host.accept=Принимать Cookie от %S
+cookies.host.reject=Отвергать Cookie от %S
+cookies.edit.invalidname=Ошибочное имя Cookie.
+cookies.edit.invalidhost=Ошибочный хост Cookie.
+cookies.edit.invalidpath=Ошибочный путь Cookie.
+cookies.header.name=Имя
+cookies.header.value=Значение
+cookies.header.domain=Домен
+cookies.header.size=Размер
+cookies.header.path=Путь
+cookies.header.expires=Истекает
+cookies.header.security=Безопасность
+cookies.header.status=Статус
+cookies.header.httponly=Только HTTP
+cookies.header.name.tooltip=Имя Cookie
+cookies.header.value.tooltip=Сохранённое значение Cookie
+cookies.header.domain.tooltip=Домен на котором хранится Cookie
+cookies.header.size.tooltip=Размер сохранённой Cookie
+cookies.header.path.tooltip=Директория в которой Cookie активна
+cookies.header.expires.tooltip=Дата истечения Cookie
+cookies.header.security.tooltip=Показывает безопасна Cookie или нет
+cookies.header.status.tooltip=Статус Cookie (понижена, помечена...)
+cookies.header.httponly.tooltip=Показывает если это только HTTP Cookie
+cookies.netinfo.Received_Cookies=Принятые Cookie
+cookies.netinfo.Sent_Cookies=Отправленные Cookie
+cookies.Path_Filter=Фильтр пути
+cookies.menu.Cookies=Cookies
+cookies.export.Export_All_Cookies=Экспортировать все Cookie...
+cookies.export.Export_All_Cookies_Tooltip=Экспортировать все Cookie браузера в файл cookies.txt
+cookies.export.Export_For_Site=Экспортировать Cookie этого сайта...
+cookies.export.Export_For_Site_Tooltip=Экспортировать Cookie для %S в файл cookies.txt
+cookies.message.There_is_no_active_page=Активная страница отсутствует.
+cookies.Break_On_Cookie=Останавливать при изменении Cookie
+cookies.Disable_Break_On_Cookie=Отключить остановку при изменении Cookie
+cookies.Cookie_Breakpoints=Точки останова Cookie
+cookies.menu.Break_On_Cookie=Останавливать на Cookie '%S'
+cookies.menu.tooltip.Break_On_Cookie=Останавливать на Cookie '%S' при удалении или изменении
+cookies.menu.Edit_Breakpoint_Condition=Править условие точки останова
+cookies.Breakpoint_condition_evaluation_fails=Ошибка валидации условия точки останова
+cookies.RemoveAll=Удалить все Cookie
+cookies.Create=Создать Cookie
+cookies.Tools=Инструменты
+cookies.ToolsTooltip=Инструменты
+cookies.ViewAll=Показать все Cookie...
+cookies.ViewAllTooltip=Открыть встроенный менеджер Cookie
+cookies.ViewExceptions=Разрешения веб-сайтов
+cookies.ViewExceptionsTooltip=Показать список разрешённых или запрещённых веб-сайтов
+cookies.Help=Помощь
+cookies.HelpTooltip=Помощь Firecookie
+cookies.About=О расширении..
+cookies.AboutTooltip=О Firecookie
+cookies.Filter=Фильтр
+cookies.FilterTooltip=Использовать данные опции для фильтрации списка Cookie
+cookies.filter.byPath=Фильтровать Cookie по текущему пути
+cookies.filter.byPathTooltip=Показывать только те Cookie, которые совпадают с текущим путём
+cookies.filter.showRejectedCookies=Показывать отвергнутые Cookie
+cookies.filter.showRejectedCookiesTooltip=Показывать даже отвергнутые Cookie в списке
+cookies.edit.title=Редактировать Cookie
+cookies.edit.name.label=Имя:
+cookies.edit.domain.label=Хост:
+cookies.edit.path.label=Путь:
+cookies.edit.expire.label=Истекает:
+cookies.edit.value.label=Значение:
+cookies.edit.secure.label=Безопасная Cookie
+cookies.edit.httponly.label=Только HTTP
+cookies.edit.session.label=Сессия
