--- a/extension/locale/ca-AD/cookies.properties
+++ b/extension/locale/ca-AD/cookies.properties
@@ -1,43 +1,43 @@
 extensions.firecookie@janodvarko.cz.description=Gestor de cookies per Firebug. Firebug ha d'estar instal·lat per poder fer servir aquesta extensió.
-firecookie.Panel=Cookies
-firecookie.Session=Sessió
-firecookie.AllowGlobally=Acceptar cookies dels llocs web
-firecookie.BlockCurrent=Bloquejar %S
-firecookie.LogEvents=Mostrar registres a la consola
-firecookie.clearWhenDeny=Netejar cookies quan es deneguen
-firecookie.Cut=Tallar
-firecookie.Copy=Copiar
-firecookie.CopyAll=Copiar tot
-firecookie.Paste=Enganxar
-firecookie.Delete=Eliminar
-firecookie.Edit=Editar
-firecookie.Accept=Acceptar
-firecookie.header.Reset_Header=Reiniciar capçalera
-firecookie.RemoveAll=Eliminar Cookies
-firecookie.Create=Crear Cookie
-firecookie.ViewAll=Mostrar totes les Cookies...
-firecookie.ViewAllTooltip=Obrir el gestor de Cookies
-firecookie.ViewExceptions=Permisos de les pàgines web
-firecookie.ViewExceptionsTooltip=Veure llista de pàgines web prohibides o permeses
-firecookie.Tools=Eines
-firecookie.ToolsTooltip=Eines
-firecookie.Help=Ajuda
-firecookie.HelpTooltip=Ajuda de Firecookie
-firecookie.About=Quant a...
-firecookie.AboutTooltip=Quant a Firecookie
-firecookie.edit.title=Editar Cookie
-firecookie.edit.group.title=Detalls de Cookie
-firecookie.edit.name.label=Nom:
-firecookie.edit.value.label=Valor:
-firecookie.edit.domain.label=Host:
-firecookie.edit.path.label=Camí:
-firecookie.edit.expire.label=Expira:
-firecookie.edit.session.label=Sessió
-firecookie.edit.secure.label=Cookie segura
-firecookie.edit.httponly.label=Només HTTP
-firecookie.Filter=Filtre
-firecookie.FilterTooltip=Fer servir les opcions donades per filtrar la llista de Cookies.
-firecookie.filter.byPath=Filtrar Cookies per camí actual
-firecookie.filter.byPathTooltip=Mostrar només Cookies que coincideixin amb el camí actual.
-firecookie.filter.showRejectedCookies=Mostrar Cookies rebutjades
-firecookie.filter.showRejectedCookiesTooltip=Mostrar Cookies a la llista encara que estiguin rebutjades.
+cookies.Panel=Cookies
+cookies.Session=Sessió
+cookies.AllowGlobally=Acceptar cookies dels llocs web
+cookies.BlockCurrent=Bloquejar %S
+cookies.LogEvents=Mostrar registres a la consola
+cookies.clearWhenDeny=Netejar cookies quan es deneguen
+cookies.Cut=Tallar
+cookies.Copy=Copiar
+cookies.CopyAll=Copiar tot
+cookies.Paste=Enganxar
+cookies.Delete=Eliminar
+cookies.Edit=Editar
+cookies.Accept=Acceptar
+cookies.header.Reset_Header=Reiniciar capçalera
+cookies.RemoveAll=Eliminar Cookies
+cookies.Create=Crear Cookie
+cookies.ViewAll=Mostrar totes les Cookies...
+cookies.ViewAllTooltip=Obrir el gestor de Cookies
+cookies.ViewExceptions=Permisos de les pàgines web
+cookies.ViewExceptionsTooltip=Veure llista de pàgines web prohibides o permeses
+cookies.Tools=Eines
+cookies.ToolsTooltip=Eines
+cookies.Help=Ajuda
+cookies.HelpTooltip=Ajuda de Firecookie
+cookies.About=Quant a...
+cookies.AboutTooltip=Quant a Firecookie
+cookies.edit.title=Editar Cookie
+cookies.edit.group.title=Detalls de Cookie
+cookies.edit.name.label=Nom:
+cookies.edit.value.label=Valor:
+cookies.edit.domain.label=Host:
+cookies.edit.path.label=Camí:
+cookies.edit.expire.label=Expira:
+cookies.edit.session.label=Sessió
+cookies.edit.secure.label=Cookie segura
+cookies.edit.httponly.label=Només HTTP
+cookies.Filter=Filtre
+cookies.FilterTooltip=Fer servir les opcions donades per filtrar la llista de Cookies.
+cookies.filter.byPath=Filtrar Cookies per camí actual
+cookies.filter.byPathTooltip=Mostrar només Cookies que coincideixin amb el camí actual.
+cookies.filter.showRejectedCookies=Mostrar Cookies rebutjades
+cookies.filter.showRejectedCookiesTooltip=Mostrar Cookies a la llista encara que estiguin rebutjades.
