--- a/extension/locale/ko-KR/cookies.properties
+++ b/extension/locale/ko-KR/cookies.properties
@@ -1,116 +1,116 @@
 extensions.firecookie@janodvarko.cz.description=파이어버그를 위한 쿠키매니저.파이어버그에서 이확장을 설치하여 사용가능함
-firecookie.Panel=쿠키
-firecookie.Session=세션
-firecookie.AllowGlobally=사이트에서 쿠키를 수락
-firecookie.BlockCurrent=차단 %S
-firecookie.LogEvents=콘솔로그 보기
-firecookie.clearWhenDeny=쿠키거부시 삭제
-firecookie.Cut=자르기
-firecookie.Copy=복사
-firecookie.CopyAll=모두 복사
-firecookie.Paste=붙여넣기
-firecookie.Delete=삭제
-firecookie.Edit=편집
-firecookie.Accept=수락
-firecookie.header.Reset_Header=헤더 리셋
-firecookie.Intro=웹 사이트를 쿠키를 항상사용 또는 사용하지않도록 지정할 수있습니다 \n 관리를 누른 다음 차단하려는 사이트의 정확한 주소를 입력한뒤 \n차단클릭또는 세션허용또는 허가
-firecookie.ExceptionsTitle=예외사항-쿠키
-firecookie.confirm.removeall=목록에있는 모든 쿠키를 삭제하시겠습니까?
-firecookie.removeall.tooltip=목록에있는 모든 쿠키를 제거합니다.
-firecookie.createcookie.tooltip=새쿠키%S 생성
-firecookie.createcookie.defaultvalue=값
-firecookie.perm.manage.tooltip=%S쿠키의 관리권한
-firecookie.console.cookiescleared=모든 쿠키가 삭제되었습니다.
-firecookie.console.cookiesrejected=거부된 쿠키:
-firecookie.console.nocookiesreceived=아무쿠키도 받지못했습니다
-firecookie.console.cookie=쿠키
-firecookie.console.deleted=삭제됨
-firecookie.console.added=추가됨
-firecookie.console.changed=변경됨
-firecookie.console.cleared=삭제됨
-firecookie.domain.label=도메인
-firecookie.secure.label=보안
-firecookie.status.accepted=허용됨
-firecookie.status.downgraded=다운그래이드됨
-firecookie.status.flagged=Flagged
-firecookie.status.rejected=거부됨
-firecookie.info.valuetab.label=값
-firecookie.info.rawdatatab.Raw_Data=Raw Data
-firecookie.info.jsontab.JSON=JSON
-firecookie.info.xmltab.XML=XML
-firecookie.default.session=기본 (동의 세션 쿠키)
-firecookie.default.thirdPartySession=기본 (동의 세션 쿠키)
-firecookie.default.thirdParty=기본 (동의 쿠키)
-firecookie.default.allow=기본 (동의 쿠키)
-firecookie.default.deny=기본 (거부 쿠키)
-firecookie.default.warn=기본 (쿠키를 수락하기 전에 경고)
-firecookie.host.session=%S 에서 세션 쿠키를 수락
-firecookie.host.accept=%S쿠키의 허용
-firecookie.host.reject=%S쿠키의 거부
-firecookie.error.invalidName=쿠키 이름이 유효하지 않습니다.
-firecookie.error.invalidURI=호스트 URI이 유효하지 않습니다
-firecookie.header.name=이름
-firecookie.header.value=값
-firecookie.header.domain=도메인
-firecookie.header.size=사이즈
-firecookie.header.path=경로
-firecookie.header.expires=만료
-firecookie.header.security=보안
-firecookie.header.status=상태
-firecookie.header.httponly=HttpOnly
-firecookie.header.name.tooltip=쿠키 이름
-firecookie.header.value.tooltip=쿠키 값에 저장
-firecookie.header.domain.tooltip=도메인은 쿠키에 저장되어있다
-firecookie.header.size.tooltip=저장되어있는 쿠키의 크기
-firecookie.header.path.tooltip=Directory where the cookie is active
-firecookie.header.expires.tooltip=쿠키 유효 기간
-firecookie.header.security.tooltip=보안쿠키인지 아닌지 보여줍니다
-firecookie.header.status.tooltip=쿠키상태 (다운그래이드,표시...)
-firecookie.header.httponly.tooltip=Shows if the cookie is an HTTP only cookie
+cookies.Panel=쿠키
+cookies.Session=세션
+cookies.AllowGlobally=사이트에서 쿠키를 수락
+cookies.BlockCurrent=차단 %S
+cookies.LogEvents=콘솔로그 보기
+cookies.clearWhenDeny=쿠키거부시 삭제
+cookies.Cut=자르기
+cookies.Copy=복사
+cookies.CopyAll=모두 복사
+cookies.Paste=붙여넣기
+cookies.Delete=삭제
+cookies.Edit=편집
+cookies.Accept=수락
+cookies.header.Reset_Header=헤더 리셋
+cookies.Intro=웹 사이트를 쿠키를 항상사용 또는 사용하지않도록 지정할 수있습니다 \n 관리를 누른 다음 차단하려는 사이트의 정확한 주소를 입력한뒤 \n차단클릭또는 세션허용또는 허가
+cookies.ExceptionsTitle=예외사항-쿠키
+cookies.confirm.removeall=목록에있는 모든 쿠키를 삭제하시겠습니까?
+cookies.removeall.tooltip=목록에있는 모든 쿠키를 제거합니다.
+cookies.createcookie.tooltip=새쿠키%S 생성
+cookies.createcookie.defaultvalue=값
+cookies.perm.manage.tooltip=%S쿠키의 관리권한
+cookies.console.cookiescleared=모든 쿠키가 삭제되었습니다.
+cookies.console.cookiesrejected=거부된 쿠키:
+cookies.console.nocookiesreceived=아무쿠키도 받지못했습니다
+cookies.console.cookie=쿠키
+cookies.console.deleted=삭제됨
+cookies.console.added=추가됨
+cookies.console.changed=변경됨
+cookies.console.cleared=삭제됨
+cookies.domain.label=도메인
+cookies.secure.label=보안
+cookies.status.accepted=허용됨
+cookies.status.downgraded=다운그래이드됨
+cookies.status.flagged=Flagged
+cookies.status.rejected=거부됨
+cookies.info.valuetab.label=값
+cookies.info.rawdatatab.Raw_Data=Raw Data
+cookies.info.jsontab.JSON=JSON
+cookies.info.xmltab.XML=XML
+cookies.default.session=기본 (동의 세션 쿠키)
+cookies.default.thirdPartySession=기본 (동의 세션 쿠키)
+cookies.default.thirdParty=기본 (동의 쿠키)
+cookies.default.allow=기본 (동의 쿠키)
+cookies.default.deny=기본 (거부 쿠키)
+cookies.default.warn=기본 (쿠키를 수락하기 전에 경고)
+cookies.host.session=%S 에서 세션 쿠키를 수락
+cookies.host.accept=%S쿠키의 허용
+cookies.host.reject=%S쿠키의 거부
+cookies.error.invalidName=쿠키 이름이 유효하지 않습니다.
+cookies.error.invalidURI=호스트 URI이 유효하지 않습니다
+cookies.header.name=이름
+cookies.header.value=값
+cookies.header.domain=도메인
+cookies.header.size=사이즈
+cookies.header.path=경로
+cookies.header.expires=만료
+cookies.header.security=보안
+cookies.header.status=상태
+cookies.header.httponly=HttpOnly
+cookies.header.name.tooltip=쿠키 이름
+cookies.header.value.tooltip=쿠키 값에 저장
+cookies.header.domain.tooltip=도메인은 쿠키에 저장되어있다
+cookies.header.size.tooltip=저장되어있는 쿠키의 크기
+cookies.header.path.tooltip=Directory where the cookie is active
+cookies.header.expires.tooltip=쿠키 유효 기간
+cookies.header.security.tooltip=보안쿠키인지 아닌지 보여줍니다
+cookies.header.status.tooltip=쿠키상태 (다운그래이드,표시...)
+cookies.header.httponly.tooltip=Shows if the cookie is an HTTP only cookie
 cookies.modulemanager.description=쿠키 모니터링에 대한 지원
 cookies.HostEnable=Enable Cookies panel for %S
 cookies.HostDisable=%S의 쿠키 판넬해제
 cookies.Permissions=쿠키를 설정하거나 해제하는 패널
 cookies.PermissionsIntro=쿠키는 웹 사이트 패널을 활성화되거나 비활성화를 선택합니다.
-firecookie.edit.invalidname=쿠키 이름이 유효하지 않습니다.
-firecookie.edit.invalidhost=쿠키 호스트가 유효하지 않습니다.
-firecookie.edit.invalidpath=쿠키 경로가 유효하지 않습니다.
-firecookie.SystemPages=시스템 페이지
-firecookie.LocalFiles=로컬 파일
-firecookie.netinfo.Received_Cookies=받은 쿠키
-firecookie.netinfo.Sent_Cookies=보낸 쿠키
-firecookie.Path_Filter=경로 필터
-firecookie.menu.Cookies=쿠키
-firecookie.export.Export_All_Cookies=모든 쿠키 내보내기 ...
-firecookie.export.Export_All_Cookies_Tooltip=모든 브라우저에서 Cookies.txt 파일에 쿠키 내보내기
-firecookie.export.Export_For_Site=이사이트의 쿠키 내보내기
-firecookie.export.Export_For_Site_Tooltip=%S의 내보낸쿠키를 cookies.txt파일로
-firecookie.message.There_is_no_active_page=활동중이지 않은 페이지입니다
-firecookie.RemoveAll=쿠키삭제
-firecookie.Create=쿠키생성
-firecookie.ViewAll=모든 쿠키보기
-firecookie.ViewAllTooltip=쿠키매니저 열기
-firecookie.ViewExceptions=웹사이트 권한
-firecookie.ViewExceptionsTooltip=허가또는 금지웹사이트 목록보기
-firecookie.Tools=도구
-firecookie.ToolsTooltip=도구
-firecookie.Help=도움말
-firecookie.HelpTooltip=파이어쿠키 도움말
-firecookie.About=정보
-firecookie.AboutTooltip=파이어쿠키 정보
-firecookie.edit.title=쿠키편집
-firecookie.edit.group.title=쿠키상세정보
-firecookie.edit.name.label=이름:
-firecookie.edit.value.label=값(Value):
-firecookie.edit.domain.label=호스트:
-firecookie.edit.path.label=경로:
-firecookie.edit.expire.label=만료 :
-firecookie.edit.session.label=세션
-firecookie.edit.secure.label=보안 쿠키
-firecookie.edit.httponly.label=HTTP 전용
-firecookie.Filter=필터
-firecookie.FilterTooltip=쿠키리스트에 필터를 적용합니다
-firecookie.filter.byPath=현재경로쿠키 필터
-firecookie.filter.byPathTooltip=현재경로와 일치하는 쿠키만 봅니다
-firecookie.filter.showRejectedCookies=거부된 쿠키보기
-firecookie.filter.showRejectedCookiesTooltip=거부된쿠키목록
+cookies.edit.invalidname=쿠키 이름이 유효하지 않습니다.
+cookies.edit.invalidhost=쿠키 호스트가 유효하지 않습니다.
+cookies.edit.invalidpath=쿠키 경로가 유효하지 않습니다.
+cookies.SystemPages=시스템 페이지
+cookies.LocalFiles=로컬 파일
+cookies.netinfo.Received_Cookies=받은 쿠키
+cookies.netinfo.Sent_Cookies=보낸 쿠키
+cookies.Path_Filter=경로 필터
+cookies.menu.Cookies=쿠키
+cookies.export.Export_All_Cookies=모든 쿠키 내보내기 ...
+cookies.export.Export_All_Cookies_Tooltip=모든 브라우저에서 Cookies.txt 파일에 쿠키 내보내기
+cookies.export.Export_For_Site=이사이트의 쿠키 내보내기
+cookies.export.Export_For_Site_Tooltip=%S의 내보낸쿠키를 cookies.txt파일로
+cookies.message.There_is_no_active_page=활동중이지 않은 페이지입니다
+cookies.RemoveAll=쿠키삭제
+cookies.Create=쿠키생성
+cookies.ViewAll=모든 쿠키보기
+cookies.ViewAllTooltip=쿠키매니저 열기
+cookies.ViewExceptions=웹사이트 권한
+cookies.ViewExceptionsTooltip=허가또는 금지웹사이트 목록보기
+cookies.Tools=도구
+cookies.ToolsTooltip=도구
+cookies.Help=도움말
+cookies.HelpTooltip=파이어쿠키 도움말
+cookies.About=정보
+cookies.AboutTooltip=파이어쿠키 정보
+cookies.edit.title=쿠키편집
+cookies.edit.group.title=쿠키상세정보
+cookies.edit.name.label=이름:
+cookies.edit.value.label=값(Value):
+cookies.edit.domain.label=호스트:
+cookies.edit.path.label=경로:
+cookies.edit.expire.label=만료 :
+cookies.edit.session.label=세션
+cookies.edit.secure.label=보안 쿠키
+cookies.edit.httponly.label=HTTP 전용
+cookies.Filter=필터
+cookies.FilterTooltip=쿠키리스트에 필터를 적용합니다
+cookies.filter.byPath=현재경로쿠키 필터
+cookies.filter.byPathTooltip=현재경로와 일치하는 쿠키만 봅니다
+cookies.filter.showRejectedCookies=거부된 쿠키보기
+cookies.filter.showRejectedCookiesTooltip=거부된쿠키목록
