--- a/extension/locale/pl/cookies.properties
+++ b/extension/locale/pl/cookies.properties
@@ -1,126 +1,126 @@
 extensions.firecookie@janodvarko.cz.description=Menedżer ciasteczek dla Firebuga. Aby używać to rozszerzenie, musi być zainstalowane rozszerzenie Firebug.
-firecookie.Panel=Ciasteczka
-firecookie.Session=Sesja
-firecookie.AllowGlobally=Akceptuj ciasteczka pochodzące z witryn
-firecookie.LogEvents=Wyświetlaj zdarzenia w konsoli
-firecookie.clearWhenDeny=Czyść ciasteczka, gdy nie są zaakceptowane
-firecookie.Cut=Wytnij
-firecookie.Copy=Kopiuj
-firecookie.CopyAll=Kopiuj wszystko
-firecookie.Paste=Wklej
-firecookie.Delete=Usuń
-firecookie.Clear_Value=Wyczyść zawartość
-firecookie.Edit=Edytuj
-firecookie.Accept=Akceptuj
-firecookie.header.Reset_Header=Resetuj nagłówek
-firecookie.Intro=Możesz określać zasady akceptacji ciasteczek. Podaj dokładny adres\nwitryny, której uprawnieniami chcesz zarządzać i następnie naciśnij\nprzycisk Zezwól, Zablokuj lub Zezwól na czas sesji.
-firecookie.ExceptionsTitle=Wyjątki - Ciasteczka
+cookies.Panel=Ciasteczka
+cookies.Session=Sesja
+cookies.AllowGlobally=Akceptuj ciasteczka pochodzące z witryn
+cookies.LogEvents=Wyświetlaj zdarzenia w konsoli
+cookies.clearWhenDeny=Czyść ciasteczka, gdy nie są zaakceptowane
+cookies.Cut=Wytnij
+cookies.Copy=Kopiuj
+cookies.CopyAll=Kopiuj wszystko
+cookies.Paste=Wklej
+cookies.Delete=Usuń
+cookies.Clear_Value=Wyczyść zawartość
+cookies.Edit=Edytuj
+cookies.Accept=Akceptuj
+cookies.header.Reset_Header=Resetuj nagłówek
+cookies.Intro=Możesz określać zasady akceptacji ciasteczek. Podaj dokładny adres\nwitryny, której uprawnieniami chcesz zarządzać i następnie naciśnij\nprzycisk Zezwól, Zablokuj lub Zezwól na czas sesji.
+cookies.ExceptionsTitle=Wyjątki - Ciasteczka
 cookies.modulemanager.description=Obsługuje monitorowanie ciasteczek
 cookies.HostEnable=Włącz panel ciasteczek dla %S
 cookies.HostDisable=Wyłącz panel ciasteczek dla %S
 cookies.Permissions=Włączanie/wyłączanie panela ciasteczek
 cookies.PermissionsIntro=Wybierz witryny, gdzie panel ciasteczek będzie włączony/wyłączony.
-firecookie.SystemPages=Strony systemowe
-firecookie.LocalFiles=Pliki lokalne
-firecookie.confirm.removeall=Czy chcesz usunąć wszystkie ciasteczka z listy?
-firecookie.confirm.removeallsession=Czy chcesz usunąć wszystkie ciasteczka sesji z listy?
-firecookie.msg.Do_not_show_this_message_again=Nie wyświetlaj tej informacji ponownie
-firecookie.Confirm_cookie_removal=Potwierdzaj usuwanie ciasteczek
-firecookie.removeall.tooltip=Usuwa wszystkie ciasteczka z listy
-firecookie.Remove_Session_Cookies=Usuń ciasteczka sesji
-firecookie.removeallsession.tooltip=Usuwa wszystkie ciasteczka sesji z listy
-firecookie.createcookie.tooltip=Tworzy nowe ciasteczko dla %S
-firecookie.createcookie.defaultvalue=Zawartość
-firecookie.perm.manage.tooltip=Zarządzanie zezwoleniami ciasteczek dla %S
-firecookie.console.cookiescleared=Wszystkie ciasteczka zostały usunięte
-firecookie.console.sessioncookiescleared=Wszystkie ciasteczka sesji zostały usunięte
-firecookie.console.cookiesrejected=Ciasteczka odrzucone:
-firecookie.console.nocookiesreceived=Nie otrzymano ciasteczek
-firecookie.console.cookie=Ciasteczko
-firecookie.console.deleted=usunięto
-firecookie.console.added=dodano
-firecookie.console.changed=zmieniono
-firecookie.console.cleared=wyczyszczono
-firecookie.domain.label=Domena
-firecookie.secure.label=Bezpieczne
-firecookie.status.accepted=Zaakceptowane
-firecookie.status.downgraded=Zdegradowane
-firecookie.status.flagged=Oznaczone
-firecookie.status.rejected=Odrzucone
-firecookie.info.valuetab.label=Zawartość
-firecookie.info.rawdatatab.Raw_Data=Dane RAW
-firecookie.info.jsontab.JSON=JSON
-firecookie.info.xmltab.XML=XML
-firecookie.default.session=Akceptuj ciasteczka sesji (domyślne)
-firecookie.default.thirdPartySession=Akceptuj ciasteczka sesji (domyślne)
-firecookie.default.thirdParty=Akceptuj ciasteczka (domyślne)
-firecookie.default.allow=Akceptuj ciasteczka (domyślne)
-firecookie.default.deny=Nie akceptuj ciasteczek (domyślne)
-firecookie.default.warn=Pytaj przed zaakceptowaniem (domyślne)
-firecookie.host.session=Akceptuj ciasteczka sesji z %S
-firecookie.host.accept=Akceptuj ciasteczka z %S
-firecookie.host.reject=Nie akceptuj ciasteczek z %S
-firecookie.edit.invalidname=Nazwa ciasteczka jest nie prawidłowa.
-firecookie.edit.invalidhost=Serwer ciasteczka jest nie prawidłowy.
-firecookie.edit.invalidpath=Ścieżka ciasteczka jest nie prawidłowa.
-firecookie.header.name=Nazwa
-firecookie.header.value=Zawartość
-firecookie.header.domain=Domena
-firecookie.header.size=Wielkość
-firecookie.header.path=Ścieżka
-firecookie.header.expires=Wygasa
-firecookie.header.security=Bezpieczeństwo
-firecookie.header.status=Status
-firecookie.header.httponly=Tylko HTTP
-firecookie.header.name.tooltip=Nazwa ciasteczka
-firecookie.header.value.tooltip=Zawartość ciasteczka
-firecookie.header.domain.tooltip=Domena przechowująca ciasteczko
-firecookie.header.size.tooltip=Wielkość ciasteczka
-firecookie.header.path.tooltip=Ścieżka do ciasteczka
-firecookie.header.expires.tooltip=Data wygaśnięcia ciasteczka
-firecookie.header.security.tooltip=Wskazuje czy ciasteczko jest bezpieczne, czy nie
-firecookie.header.status.tooltip=Status ciasteczka (zdegradowane, oznaczone…)
-firecookie.header.httponly.tooltip=Wyświetla tylko jeśli ciasteczko jest ciasteczkiem HTTP
-firecookie.netinfo.Received_Cookies=Odebrane ciasteczka
-firecookie.netinfo.Sent_Cookies=Wysłane ciasteczka
-firecookie.Path_Filter=Filtr ścieżki
-firecookie.menu.Cookies=Ciasteczka
-firecookie.export.Export_All_Cookies=Eksportuj wszystkie ciasteczka…
-firecookie.export.Export_All_Cookies_Tooltip=Eksportuje wszystkie ciasteczka przeglądarki do pliku cookies.txt
-firecookie.export.Export_For_Site=Eksportuj ciasteczka dla tej witryny…
-firecookie.export.Export_For_Site_Tooltip=Eksportuje ciasteczka dla %S do pliku cookies.txt
-firecookie.message.There_is_no_active_page=Nie ma aktywnej strony
-firecookie.Break_On_Cookie=Wstrzymaj na zmianie ciasteczka
-firecookie.Disable_Break_On_Cookie=Wyłącz wstrzymanie na zmianie ciasteczka
-firecookie.Cookie_Breakpoints=Punkty wstrzymania ciasteczek
-firecookie.menu.Break_On_Cookie=Wstrzymaj na ciasteczku „%S”
-firecookie.menu.tooltip.Break_On_Cookie=Wstrzymuje na ciasteczku „%S”, gdy zostało usunięte lub zmienione
-firecookie.menu.Edit_Breakpoint_Condition=Modyfikuj warunki punktów wstrzymania
-firecookie.Breakpoint_condition_evaluation_fails=Nie udało się ocenić warunków punktu wstrzymania
-firecookie.RemoveAll=Usuń ciasteczka
-firecookie.Create=Utwórz ciasteczko
-firecookie.Tools=Narzędzia
-firecookie.ToolsTooltip=Narzędzia
-firecookie.ViewAll=Wyświetl wszystkie ciasteczka…
-firecookie.ViewAllTooltip=Otwiera menedżera ciasteczek
-firecookie.ViewExceptions=Uprawnienia witryn…
-firecookie.ViewExceptionsTooltip=Wyświetla listę dozwolonych lub zabronionych witryn
-firecookie.Help=Pomoc
-firecookie.HelpTooltip=Pomoc dla Firecookie
-firecookie.About=Firecookie – informacje…
-firecookie.AboutTooltip=Informacje o Firecookie
-firecookie.Filter=Filtr
-firecookie.FilterTooltip=Używaj dostarczonych funkcji do filtrowania listy ciasteczek
-firecookie.filter.byPath=Filtruj ciasteczka wg aktualnej ścieżki
-firecookie.filter.byPathTooltip=Wyświetla tylko ciasteczka pasujące do aktualnej ścieżki
-firecookie.filter.showRejectedCookies=Wyświetl odrzucone ciasteczka
-firecookie.filter.showRejectedCookiesTooltip=Wyświetla na liście nawet odrzucone ciasteczka
-firecookie.edit.title=Edytuj ciasteczko
-firecookie.edit.name.label=Nazwa:
-firecookie.edit.domain.label=Host:
-firecookie.edit.path.label=Ścieżka:
-firecookie.edit.expire.label=Wygasa:
-firecookie.edit.value.label=Zawartość:
-firecookie.edit.secure.label=Bezpieczne ciasteczko
-firecookie.edit.httponly.label=Tylko HTTP
-firecookie.edit.session.label=Sesja
+cookies.SystemPages=Strony systemowe
+cookies.LocalFiles=Pliki lokalne
+cookies.confirm.removeall=Czy chcesz usunąć wszystkie ciasteczka z listy?
+cookies.confirm.removeallsession=Czy chcesz usunąć wszystkie ciasteczka sesji z listy?
+cookies.msg.Do_not_show_this_message_again=Nie wyświetlaj tej informacji ponownie
+cookies.Confirm_cookie_removal=Potwierdzaj usuwanie ciasteczek
+cookies.removeall.tooltip=Usuwa wszystkie ciasteczka z listy
+cookies.Remove_Session_Cookies=Usuń ciasteczka sesji
+cookies.removeallsession.tooltip=Usuwa wszystkie ciasteczka sesji z listy
+cookies.createcookie.tooltip=Tworzy nowe ciasteczko dla %S
+cookies.createcookie.defaultvalue=Zawartość
+cookies.perm.manage.tooltip=Zarządzanie zezwoleniami ciasteczek dla %S
+cookies.console.cookiescleared=Wszystkie ciasteczka zostały usunięte
+cookies.console.sessioncookiescleared=Wszystkie ciasteczka sesji zostały usunięte
+cookies.console.cookiesrejected=Ciasteczka odrzucone:
+cookies.console.nocookiesreceived=Nie otrzymano ciasteczek
+cookies.console.cookie=Ciasteczko
+cookies.console.deleted=usunięto
+cookies.console.added=dodano
+cookies.console.changed=zmieniono
+cookies.console.cleared=wyczyszczono
+cookies.domain.label=Domena
+cookies.secure.label=Bezpieczne
+cookies.status.accepted=Zaakceptowane
+cookies.status.downgraded=Zdegradowane
+cookies.status.flagged=Oznaczone
+cookies.status.rejected=Odrzucone
+cookies.info.valuetab.label=Zawartość
+cookies.info.rawdatatab.Raw_Data=Dane RAW
+cookies.info.jsontab.JSON=JSON
+cookies.info.xmltab.XML=XML
+cookies.default.session=Akceptuj ciasteczka sesji (domyślne)
+cookies.default.thirdPartySession=Akceptuj ciasteczka sesji (domyślne)
+cookies.default.thirdParty=Akceptuj ciasteczka (domyślne)
+cookies.default.allow=Akceptuj ciasteczka (domyślne)
+cookies.default.deny=Nie akceptuj ciasteczek (domyślne)
+cookies.default.warn=Pytaj przed zaakceptowaniem (domyślne)
+cookies.host.session=Akceptuj ciasteczka sesji z %S
+cookies.host.accept=Akceptuj ciasteczka z %S
+cookies.host.reject=Nie akceptuj ciasteczek z %S
+cookies.edit.invalidname=Nazwa ciasteczka jest nie prawidłowa.
+cookies.edit.invalidhost=Serwer ciasteczka jest nie prawidłowy.
+cookies.edit.invalidpath=Ścieżka ciasteczka jest nie prawidłowa.
+cookies.header.name=Nazwa
+cookies.header.value=Zawartość
+cookies.header.domain=Domena
+cookies.header.size=Wielkość
+cookies.header.path=Ścieżka
+cookies.header.expires=Wygasa
+cookies.header.security=Bezpieczeństwo
+cookies.header.status=Status
+cookies.header.httponly=Tylko HTTP
+cookies.header.name.tooltip=Nazwa ciasteczka
+cookies.header.value.tooltip=Zawartość ciasteczka
+cookies.header.domain.tooltip=Domena przechowująca ciasteczko
+cookies.header.size.tooltip=Wielkość ciasteczka
+cookies.header.path.tooltip=Ścieżka do ciasteczka
+cookies.header.expires.tooltip=Data wygaśnięcia ciasteczka
+cookies.header.security.tooltip=Wskazuje czy ciasteczko jest bezpieczne, czy nie
+cookies.header.status.tooltip=Status ciasteczka (zdegradowane, oznaczone…)
+cookies.header.httponly.tooltip=Wyświetla tylko jeśli ciasteczko jest ciasteczkiem HTTP
+cookies.netinfo.Received_Cookies=Odebrane ciasteczka
+cookies.netinfo.Sent_Cookies=Wysłane ciasteczka
+cookies.Path_Filter=Filtr ścieżki
+cookies.menu.Cookies=Ciasteczka
+cookies.export.Export_All_Cookies=Eksportuj wszystkie ciasteczka…
+cookies.export.Export_All_Cookies_Tooltip=Eksportuje wszystkie ciasteczka przeglądarki do pliku cookies.txt
+cookies.export.Export_For_Site=Eksportuj ciasteczka dla tej witryny…
+cookies.export.Export_For_Site_Tooltip=Eksportuje ciasteczka dla %S do pliku cookies.txt
+cookies.message.There_is_no_active_page=Nie ma aktywnej strony
+cookies.Break_On_Cookie=Wstrzymaj na zmianie ciasteczka
+cookies.Disable_Break_On_Cookie=Wyłącz wstrzymanie na zmianie ciasteczka
+cookies.Cookie_Breakpoints=Punkty wstrzymania ciasteczek
+cookies.menu.Break_On_Cookie=Wstrzymaj na ciasteczku „%S”
+cookies.menu.tooltip.Break_On_Cookie=Wstrzymuje na ciasteczku „%S”, gdy zostało usunięte lub zmienione
+cookies.menu.Edit_Breakpoint_Condition=Modyfikuj warunki punktów wstrzymania
+cookies.Breakpoint_condition_evaluation_fails=Nie udało się ocenić warunków punktu wstrzymania
+cookies.RemoveAll=Usuń ciasteczka
+cookies.Create=Utwórz ciasteczko
+cookies.Tools=Narzędzia
+cookies.ToolsTooltip=Narzędzia
+cookies.ViewAll=Wyświetl wszystkie ciasteczka…
+cookies.ViewAllTooltip=Otwiera menedżera ciasteczek
+cookies.ViewExceptions=Uprawnienia witryn…
+cookies.ViewExceptionsTooltip=Wyświetla listę dozwolonych lub zabronionych witryn
+cookies.Help=Pomoc
+cookies.HelpTooltip=Pomoc dla Firecookie
+cookies.About=Firecookie – informacje…
+cookies.AboutTooltip=Informacje o Firecookie
+cookies.Filter=Filtr
+cookies.FilterTooltip=Używaj dostarczonych funkcji do filtrowania listy ciasteczek
+cookies.filter.byPath=Filtruj ciasteczka wg aktualnej ścieżki
+cookies.filter.byPathTooltip=Wyświetla tylko ciasteczka pasujące do aktualnej ścieżki
+cookies.filter.showRejectedCookies=Wyświetl odrzucone ciasteczka
+cookies.filter.showRejectedCookiesTooltip=Wyświetla na liście nawet odrzucone ciasteczka
+cookies.edit.title=Edytuj ciasteczko
+cookies.edit.name.label=Nazwa:
+cookies.edit.domain.label=Host:
+cookies.edit.path.label=Ścieżka:
+cookies.edit.expire.label=Wygasa:
+cookies.edit.value.label=Zawartość:
+cookies.edit.secure.label=Bezpieczne ciasteczko
+cookies.edit.httponly.label=Tylko HTTP
+cookies.edit.session.label=Sesja
