--- a/extension/locale/pt-BR/cookies.properties
+++ b/extension/locale/pt-BR/cookies.properties
@@ -1,112 +1,112 @@
 extensions.firecookie@janodvarko.cz.description=Cookie manager for Firebug. Firebug has to be installed in order to use this extension.
-firecookie.Panel=Cookies
-firecookie.Session=Sessão
-firecookie.AllowGlobally=Aceitar cookies dos sites
-firecookie.BlockCurrent=Bloquear %S
-firecookie.LogEvents=Exibir logs no console
-firecookie.clearWhenDeny=Limpar cookies quando negar
-firecookie.Cut=Cortar
-firecookie.Copy=Copiar
-firecookie.CopyAll=Copiar tudo
-firecookie.Paste=Colar
-firecookie.Delete=Excluir
-firecookie.Edit=Editar
-firecookie.Accept=Aceitar
-firecookie.Intro=Você pode especificar quais páginas são sempre ou nunca permitidos para usar cookies.\nDigite o endereço exato do site que você quer gerenciar e então clique em Bloquar,\nPermitir para sessão, ou Permitir.
-firecookie.ExceptionsTitle=Exceções - Cookies
-firecookie.confirm.removeall=Deseja remover todos os cookies na lista?
-firecookie.removeall.tooltip=Remover todos os cookies na lista.
-firecookie.createcookie.tooltip=Criar novo cookie para %S
-firecookie.createcookie.defaultvalue=Valor
-firecookie.perm.manage.tooltip=Gerenciar permissões do cookie para %S
-firecookie.console.cookiescleared=Todos os cookies foram removidos.
-firecookie.console.cookiesrejected=Cookies rejeitados:
-firecookie.console.nocookiesreceived=Nenhum cookie recebido
-firecookie.console.cookie=Cookie
-firecookie.console.deleted=apagado
-firecookie.console.added=adicionado
-firecookie.console.changed=alterado
-firecookie.console.cleared=limpo
-firecookie.domain.label=Domínio
-firecookie.secure.label=Seguro
-firecookie.status.accepted=Aceitado
-firecookie.status.downgraded=Downgraded
-firecookie.status.flagged=Flagged
-firecookie.status.rejected=Rejeitado
-firecookie.info.valuetab.label=Valor
-firecookie.info.rawdatatab.Raw_Data=Dados Raw
-firecookie.default.session=Padrão (Aceitar cookies da sessão)
-firecookie.default.thirdPartySession=Padrão (Aceitar cookies da sessão)
-firecookie.default.thirdParty=Padrão (Aceitar cookies)
-firecookie.default.allow=Padrão (Aceitar cookies)
-firecookie.default.deny=Padrão (Negar cookies)
-firecookie.default.warn=Padrão (Alertar antes de aceitar o cookie)
-firecookie.host.session=Aceitar cookies da sessão de %S
-firecookie.host.accept=Aceitar cookies da %S
-firecookie.host.reject=Negar cookies de %S
-firecookie.error.invalidName=Nome do cookie não é válido.
-firecookie.error.invalidURI=URI do host não é válido.
-firecookie.header.name=Nome
-firecookie.header.value=Valor
-firecookie.header.domain=Domínio
-firecookie.header.size=Tamanho
-firecookie.header.path=Caminho
-firecookie.header.expires=Expira
-firecookie.header.security=Segurança
-firecookie.header.status=Status
-firecookie.header.httponly=HttpOnly
-firecookie.header.name.tooltip=Nome
-firecookie.header.value.tooltip=Valor
-firecookie.header.domain.tooltip=Domínio
-firecookie.header.size.tooltip=Tamanho
-firecookie.header.path.tooltip=Caminho
-firecookie.header.expires.tooltip=Expira
-firecookie.header.security.tooltip=Segurança
-firecookie.header.status.tooltip=Status do cookie (downgraded, flagged...)
-firecookie.header.httponly.tooltip=Shows if the cookie is an HTTP only cookie
+cookies.Panel=Cookies
+cookies.Session=Sessão
+cookies.AllowGlobally=Aceitar cookies dos sites
+cookies.BlockCurrent=Bloquear %S
+cookies.LogEvents=Exibir logs no console
+cookies.clearWhenDeny=Limpar cookies quando negar
+cookies.Cut=Cortar
+cookies.Copy=Copiar
+cookies.CopyAll=Copiar tudo
+cookies.Paste=Colar
+cookies.Delete=Excluir
+cookies.Edit=Editar
+cookies.Accept=Aceitar
+cookies.Intro=Você pode especificar quais páginas são sempre ou nunca permitidos para usar cookies.\nDigite o endereço exato do site que você quer gerenciar e então clique em Bloquar,\nPermitir para sessão, ou Permitir.
+cookies.ExceptionsTitle=Exceções - Cookies
+cookies.confirm.removeall=Deseja remover todos os cookies na lista?
+cookies.removeall.tooltip=Remover todos os cookies na lista.
+cookies.createcookie.tooltip=Criar novo cookie para %S
+cookies.createcookie.defaultvalue=Valor
+cookies.perm.manage.tooltip=Gerenciar permissões do cookie para %S
+cookies.console.cookiescleared=Todos os cookies foram removidos.
+cookies.console.cookiesrejected=Cookies rejeitados:
+cookies.console.nocookiesreceived=Nenhum cookie recebido
+cookies.console.cookie=Cookie
+cookies.console.deleted=apagado
+cookies.console.added=adicionado
+cookies.console.changed=alterado
+cookies.console.cleared=limpo
+cookies.domain.label=Domínio
+cookies.secure.label=Seguro
+cookies.status.accepted=Aceitado
+cookies.status.downgraded=Downgraded
+cookies.status.flagged=Flagged
+cookies.status.rejected=Rejeitado
+cookies.info.valuetab.label=Valor
+cookies.info.rawdatatab.Raw_Data=Dados Raw
+cookies.default.session=Padrão (Aceitar cookies da sessão)
+cookies.default.thirdPartySession=Padrão (Aceitar cookies da sessão)
+cookies.default.thirdParty=Padrão (Aceitar cookies)
+cookies.default.allow=Padrão (Aceitar cookies)
+cookies.default.deny=Padrão (Negar cookies)
+cookies.default.warn=Padrão (Alertar antes de aceitar o cookie)
+cookies.host.session=Aceitar cookies da sessão de %S
+cookies.host.accept=Aceitar cookies da %S
+cookies.host.reject=Negar cookies de %S
+cookies.error.invalidName=Nome do cookie não é válido.
+cookies.error.invalidURI=URI do host não é válido.
+cookies.header.name=Nome
+cookies.header.value=Valor
+cookies.header.domain=Domínio
+cookies.header.size=Tamanho
+cookies.header.path=Caminho
+cookies.header.expires=Expira
+cookies.header.security=Segurança
+cookies.header.status=Status
+cookies.header.httponly=HttpOnly
+cookies.header.name.tooltip=Nome
+cookies.header.value.tooltip=Valor
+cookies.header.domain.tooltip=Domínio
+cookies.header.size.tooltip=Tamanho
+cookies.header.path.tooltip=Caminho
+cookies.header.expires.tooltip=Expira
+cookies.header.security.tooltip=Segurança
+cookies.header.status.tooltip=Status do cookie (downgraded, flagged...)
+cookies.header.httponly.tooltip=Shows if the cookie is an HTTP only cookie
 cookies.modulemanager.description=Suporte para Cookie Monitoring
 cookies.HostEnable=Ativar painel de Cookies para %S
 cookies.HostDisable=Desativar painel de Cookies para %S
 cookies.Permissions=Ativa ou desativa painel de Cookies
 cookies.PermissionsIntro=Choose web sites where Cookies panel will be enabled or disabled.
-firecookie.edit.invalidname=Nome do Cookie não é válido.
-firecookie.edit.invalidhost=Host do Cookie não é válido.
-firecookie.edit.invalidpath=Caminho do Cookie não é válido.
-firecookie.SystemPages=Páginas do sistema
-firecookie.LocalFiles=Arquivos locais
-firecookie.netinfo.Received_Cookies=Cookies recebidos
-firecookie.netinfo.Sent_Cookies=Cookies enviados
-firecookie.Path_Filter=Filtro do caminho
-firecookie.menu.Cookies=Cookies
-firecookie.export.Export_All_Cookies=Exportar todos os Cookies...
-firecookie.export.Export_All_Cookies_Tooltip=Exportar todos os cookies do navegador num arquivo cookies.txt
-firecookie.export.Export_For_Site=Exportar Cookies para este site...
-firecookie.export.Export_For_Site_Tooltip=Exportar cookies para %S num arquivo cookies.txt
-firecookie.RemoveAll=Remover para site
-firecookie.Create=Criar cookie
-firecookie.ViewAll=Exibir todos os cookies…
-firecookie.ViewAllTooltip=Abrir gerenciador de cookie
-firecookie.ViewExceptions=Permissões para páginas da web…
-firecookie.ViewExceptionsTooltip=Exibir lista de páginas permitidas ou proibidas
-firecookie.Tools=Ferramentas
-firecookie.ToolsTooltip=Ferramentas
-firecookie.Help=Ajuda
-firecookie.HelpTooltip=Ajuda para Firecookie
-firecookie.About=Sobre…
-firecookie.AboutTooltip=Sobre Firecookie
-firecookie.edit.title=Editar Cookie
-firecookie.edit.group.title=Detalhes do cookie
-firecookie.edit.name.label=Nome:
-firecookie.edit.value.label=Valor:
-firecookie.edit.domain.label=Host:
-firecookie.edit.path.label=Caminho:
-firecookie.edit.expire.label=Expira:
-firecookie.edit.session.label=Sessão
-firecookie.edit.secure.label=Cookie seguro
-firecookie.edit.httponly.label=HTTP Only
-firecookie.Filter=Filtro
-firecookie.FilterTooltip=Usar opções passadas para filtrar a lista de cookie
-firecookie.filter.byPath=Filtrar cookies por caminho
-firecookie.filter.byPathTooltip=Exibir somente cookies que corresponde ao caminho atual
-firecookie.filter.showRejectedCookies=Exibir cookies rejeitados
-firecookie.filter.showRejectedCookiesTooltip=Mostrar também cookies rejeitados na lista.
+cookies.edit.invalidname=Nome do Cookie não é válido.
+cookies.edit.invalidhost=Host do Cookie não é válido.
+cookies.edit.invalidpath=Caminho do Cookie não é válido.
+cookies.SystemPages=Páginas do sistema
+cookies.LocalFiles=Arquivos locais
+cookies.netinfo.Received_Cookies=Cookies recebidos
+cookies.netinfo.Sent_Cookies=Cookies enviados
+cookies.Path_Filter=Filtro do caminho
+cookies.menu.Cookies=Cookies
+cookies.export.Export_All_Cookies=Exportar todos os Cookies...
+cookies.export.Export_All_Cookies_Tooltip=Exportar todos os cookies do navegador num arquivo cookies.txt
+cookies.export.Export_For_Site=Exportar Cookies para este site...
+cookies.export.Export_For_Site_Tooltip=Exportar cookies para %S num arquivo cookies.txt
+cookies.RemoveAll=Remover para site
+cookies.Create=Criar cookie
+cookies.ViewAll=Exibir todos os cookies…
+cookies.ViewAllTooltip=Abrir gerenciador de cookie
+cookies.ViewExceptions=Permissões para páginas da web…
+cookies.ViewExceptionsTooltip=Exibir lista de páginas permitidas ou proibidas
+cookies.Tools=Ferramentas
+cookies.ToolsTooltip=Ferramentas
+cookies.Help=Ajuda
+cookies.HelpTooltip=Ajuda para Firecookie
+cookies.About=Sobre…
+cookies.AboutTooltip=Sobre Firecookie
+cookies.edit.title=Editar Cookie
+cookies.edit.group.title=Detalhes do cookie
+cookies.edit.name.label=Nome:
+cookies.edit.value.label=Valor:
+cookies.edit.domain.label=Host:
+cookies.edit.path.label=Caminho:
+cookies.edit.expire.label=Expira:
+cookies.edit.session.label=Sessão
+cookies.edit.secure.label=Cookie seguro
+cookies.edit.httponly.label=HTTP Only
+cookies.Filter=Filtro
+cookies.FilterTooltip=Usar opções passadas para filtrar a lista de cookie
+cookies.filter.byPath=Filtrar cookies por caminho
+cookies.filter.byPathTooltip=Exibir somente cookies que corresponde ao caminho atual
+cookies.filter.showRejectedCookies=Exibir cookies rejeitados
+cookies.filter.showRejectedCookiesTooltip=Mostrar também cookies rejeitados na lista.
