--- a/extension/locale/ro-RO/cookies.properties
+++ b/extension/locale/ro-RO/cookies.properties
@@ -1,112 +1,112 @@
 extensions.firecookie@janodvarko.cz.description=Gestionar de cookie-uri pentru Firebug. Pentru a folosi această extensie, aveți nevoie de Firebug instalat.
-firecookie.Panel=Cookie-uri
-firecookie.Session=Sesiune
-firecookie.AllowGlobally=Acceptă cookie-uri de la saituri
-firecookie.BlockCurrent=Blochează %S
-firecookie.LogEvents=Arată logurile în consolă
-firecookie.clearWhenDeny=Curăță cookie-urile când se respinge accesul
-firecookie.Cut=Taie
-firecookie.Copy=Copiază
-firecookie.CopyAll=Copiază tot
-firecookie.Paste=Lipește
-firecookie.Delete=Șterge
-firecookie.Edit=Editează
-firecookie.Accept=Acceptă
-firecookie.Intro=Puteți specifica ce saituri web au sau nu au întotdeauna permisiunea de a seta cookie-uri.\nTastați exact adresa saitului pe care doriți să-l gestionați și apoi apăsați Blochează,\nPermite pentru sesiune sau Permite.
-firecookie.ExceptionsTitle=Excepții - Cookie-uri
-firecookie.confirm.removeall=Doriți să eliminați toate cookie-urile din listă?
-firecookie.removeall.tooltip=Elimină toate cookie-urile din listă.
-firecookie.createcookie.tooltip=Creează un cookie nou pentru %S
-firecookie.createcookie.defaultvalue=Valoare
-firecookie.perm.manage.tooltip=Gestionează permisiunile pentru cookie-uri pentru %S
-firecookie.console.cookiescleared=Toate cookie-urile au fost eliminate.
-firecookie.console.cookiesrejected=Cookie-uri respinse:
-firecookie.console.nocookiesreceived=Niciun cookie primit
-firecookie.console.cookie=Cookie
-firecookie.console.deleted=șters
-firecookie.console.added=adăugat
-firecookie.console.changed=schimbat
-firecookie.console.cleared=curățat
-firecookie.domain.label=Domeniu
-firecookie.secure.label=Securizat
-firecookie.status.accepted=Acceptat
-firecookie.status.downgraded=Retrogradat
-firecookie.status.flagged=Marcat
-firecookie.status.rejected=Respins
-firecookie.info.valuetab.label=Valoare
-firecookie.info.rawdatatab.Raw_Data=Date brute
-firecookie.default.session=Implicit (Acceptă cookie-urile pentru sesiune)
-firecookie.default.thirdPartySession=Implicit (Acceptă cookie-urile pentru sesiune)
-firecookie.default.thirdParty=Implicit (Acceptă cookie-urile)
-firecookie.default.allow=Implicit (Acceptă cookie-urile)
-firecookie.default.deny=Implicit (Respinge cookie-urile)
-firecookie.default.warn=Implicit (Avertizare înainte de a accepta un cookie)
-firecookie.host.session=Acceptă cookie-uri în această sesiune de la %S
-firecookie.host.accept=Acceptă cookie-uri de la %S
-firecookie.host.reject=Respinge cookie-uri de la %S
-firecookie.error.invalidName=Numele de cookie nu este valid.
-firecookie.error.invalidURI=Adresa gazdei nu este validă.
-firecookie.header.name=Nume
-firecookie.header.value=Valoare
-firecookie.header.domain=Domeniu
-firecookie.header.size=Mărime
-firecookie.header.path=Cale
-firecookie.header.expires=Expiră la
-firecookie.header.security=Securitate
-firecookie.header.status=Stare
-firecookie.header.httponly=DoarHTTP
-firecookie.header.name.tooltip=Numele cookie-ului
-firecookie.header.value.tooltip=Valoarea stocată în cookie
-firecookie.header.domain.tooltip=Domeniul stocat în cookie
-firecookie.header.size.tooltip=Mărimea cookie-ului stocat
-firecookie.header.path.tooltip=Directorul unde cookie-ul este activ
-firecookie.header.expires.tooltip=Data expirării cookie-ului
-firecookie.header.security.tooltip=Arată dacă un cookie este securizat sau nu
-firecookie.header.status.tooltip=Starea cookie-ului (retrogradat, marcat...)
-firecookie.header.httponly.tooltip=Arată dacă un cookie e doar pentru HTTP
+cookies.Panel=Cookie-uri
+cookies.Session=Sesiune
+cookies.AllowGlobally=Acceptă cookie-uri de la saituri
+cookies.BlockCurrent=Blochează %S
+cookies.LogEvents=Arată logurile în consolă
+cookies.clearWhenDeny=Curăță cookie-urile când se respinge accesul
+cookies.Cut=Taie
+cookies.Copy=Copiază
+cookies.CopyAll=Copiază tot
+cookies.Paste=Lipește
+cookies.Delete=Șterge
+cookies.Edit=Editează
+cookies.Accept=Acceptă
+cookies.Intro=Puteți specifica ce saituri web au sau nu au întotdeauna permisiunea de a seta cookie-uri.\nTastați exact adresa saitului pe care doriți să-l gestionați și apoi apăsați Blochează,\nPermite pentru sesiune sau Permite.
+cookies.ExceptionsTitle=Excepții - Cookie-uri
+cookies.confirm.removeall=Doriți să eliminați toate cookie-urile din listă?
+cookies.removeall.tooltip=Elimină toate cookie-urile din listă.
+cookies.createcookie.tooltip=Creează un cookie nou pentru %S
+cookies.createcookie.defaultvalue=Valoare
+cookies.perm.manage.tooltip=Gestionează permisiunile pentru cookie-uri pentru %S
+cookies.console.cookiescleared=Toate cookie-urile au fost eliminate.
+cookies.console.cookiesrejected=Cookie-uri respinse:
+cookies.console.nocookiesreceived=Niciun cookie primit
+cookies.console.cookie=Cookie
+cookies.console.deleted=șters
+cookies.console.added=adăugat
+cookies.console.changed=schimbat
+cookies.console.cleared=curățat
+cookies.domain.label=Domeniu
+cookies.secure.label=Securizat
+cookies.status.accepted=Acceptat
+cookies.status.downgraded=Retrogradat
+cookies.status.flagged=Marcat
+cookies.status.rejected=Respins
+cookies.info.valuetab.label=Valoare
+cookies.info.rawdatatab.Raw_Data=Date brute
+cookies.default.session=Implicit (Acceptă cookie-urile pentru sesiune)
+cookies.default.thirdPartySession=Implicit (Acceptă cookie-urile pentru sesiune)
+cookies.default.thirdParty=Implicit (Acceptă cookie-urile)
+cookies.default.allow=Implicit (Acceptă cookie-urile)
+cookies.default.deny=Implicit (Respinge cookie-urile)
+cookies.default.warn=Implicit (Avertizare înainte de a accepta un cookie)
+cookies.host.session=Acceptă cookie-uri în această sesiune de la %S
+cookies.host.accept=Acceptă cookie-uri de la %S
+cookies.host.reject=Respinge cookie-uri de la %S
+cookies.error.invalidName=Numele de cookie nu este valid.
+cookies.error.invalidURI=Adresa gazdei nu este validă.
+cookies.header.name=Nume
+cookies.header.value=Valoare
+cookies.header.domain=Domeniu
+cookies.header.size=Mărime
+cookies.header.path=Cale
+cookies.header.expires=Expiră la
+cookies.header.security=Securitate
+cookies.header.status=Stare
+cookies.header.httponly=DoarHTTP
+cookies.header.name.tooltip=Numele cookie-ului
+cookies.header.value.tooltip=Valoarea stocată în cookie
+cookies.header.domain.tooltip=Domeniul stocat în cookie
+cookies.header.size.tooltip=Mărimea cookie-ului stocat
+cookies.header.path.tooltip=Directorul unde cookie-ul este activ
+cookies.header.expires.tooltip=Data expirării cookie-ului
+cookies.header.security.tooltip=Arată dacă un cookie este securizat sau nu
+cookies.header.status.tooltip=Starea cookie-ului (retrogradat, marcat...)
+cookies.header.httponly.tooltip=Arată dacă un cookie e doar pentru HTTP
 cookies.modulemanager.description=Suport pentru monitorizarea de cookie-uri
 cookies.HostEnable=Activează panoul Cookie-uri pentru %S
 cookies.HostDisable=Dezactivează panoul Cookie-uri pentru %S
 cookies.Permissions=Activează sau dezactivează panoul Cookie-uri
 cookies.PermissionsIntro=Alegeți saiturile web pe care panoul Cookie-uri va fi activat sau dezactivat.
-firecookie.edit.invalidname=Numele de cookie nu este valid.
-firecookie.edit.invalidhost=Gazda cookie-ului nu este validă.
-firecookie.edit.invalidpath=Calea cookie-ului nu este validă.
-firecookie.SystemPages=Pagini de sistem
-firecookie.LocalFiles=Fișiere locale
-firecookie.netinfo.Received_Cookies=Cookie-uri primite
-firecookie.netinfo.Sent_Cookies=Cookie-uri trimise
-firecookie.Path_Filter=Filtru pe cale
-firecookie.menu.Cookies=Cookie-uri
-firecookie.export.Export_All_Cookies=Exportă toate cookie-urile...
-firecookie.export.Export_All_Cookies_Tooltip=Exportă toate cookie-urile navigatorului într-un fișier cookies.txt
-firecookie.export.Export_For_Site=Exportă cookie-urile pentru acest sait...
-firecookie.export.Export_For_Site_Tooltip=Exportă cookie-urile pentru %S în fișierul cookies.txt
-firecookie.RemoveAll=Elimină cookie-urile
-firecookie.Create=Creează un cookie
-firecookie.ViewAll=Arată toate cookie-urile...
-firecookie.ViewAllTooltip=Deschide gestionarul de cookie-uri
-firecookie.ViewExceptions=Permisiuni pentru saituri web...
-firecookie.ViewExceptionsTooltip=Vedeți lista de saituri web permise sau nepermise
-firecookie.Tools=Unelte
-firecookie.ToolsTooltip=Unelte
-firecookie.Help=Ajutor
-firecookie.HelpTooltip=Ajutor pentru Firecookie
-firecookie.About=Despre...
-firecookie.AboutTooltip=Despre Firecookie
-firecookie.edit.title=Editare cookie
-firecookie.edit.group.title=Detalii cookie
-firecookie.edit.name.label=Nume:
-firecookie.edit.value.label=Valoare:
-firecookie.edit.domain.label=Gazdă:
-firecookie.edit.path.label=Cale:
-firecookie.edit.expire.label=Expiră la:
-firecookie.edit.session.label=Sesiune
-firecookie.edit.secure.label=Cookie securizat
-firecookie.edit.httponly.label=Doar HTTP
-firecookie.Filter=Filtrare
-firecookie.FilterTooltip=Folosește opțiunile date pentru a filtra lista de cookie-uri.
-firecookie.filter.byPath=Filtrează cookie-urile după calea curentă
-firecookie.filter.byPathTooltip=Arată doar cookie-uri care se potrivesc cu calea curentă.
-firecookie.filter.showRejectedCookies=Arată cookie-urile respinse
-firecookie.filter.showRejectedCookiesTooltip=Afișează în listă și cookie-urile respinse.
+cookies.edit.invalidname=Numele de cookie nu este valid.
+cookies.edit.invalidhost=Gazda cookie-ului nu este validă.
+cookies.edit.invalidpath=Calea cookie-ului nu este validă.
+cookies.SystemPages=Pagini de sistem
+cookies.LocalFiles=Fișiere locale
+cookies.netinfo.Received_Cookies=Cookie-uri primite
+cookies.netinfo.Sent_Cookies=Cookie-uri trimise
+cookies.Path_Filter=Filtru pe cale
+cookies.menu.Cookies=Cookie-uri
+cookies.export.Export_All_Cookies=Exportă toate cookie-urile...
+cookies.export.Export_All_Cookies_Tooltip=Exportă toate cookie-urile navigatorului într-un fișier cookies.txt
+cookies.export.Export_For_Site=Exportă cookie-urile pentru acest sait...
+cookies.export.Export_For_Site_Tooltip=Exportă cookie-urile pentru %S în fișierul cookies.txt
+cookies.RemoveAll=Elimină cookie-urile
+cookies.Create=Creează un cookie
+cookies.ViewAll=Arată toate cookie-urile...
+cookies.ViewAllTooltip=Deschide gestionarul de cookie-uri
+cookies.ViewExceptions=Permisiuni pentru saituri web...
+cookies.ViewExceptionsTooltip=Vedeți lista de saituri web permise sau nepermise
+cookies.Tools=Unelte
+cookies.ToolsTooltip=Unelte
+cookies.Help=Ajutor
+cookies.HelpTooltip=Ajutor pentru Firecookie
+cookies.About=Despre...
+cookies.AboutTooltip=Despre Firecookie
+cookies.edit.title=Editare cookie
+cookies.edit.group.title=Detalii cookie
+cookies.edit.name.label=Nume:
+cookies.edit.value.label=Valoare:
+cookies.edit.domain.label=Gazdă:
+cookies.edit.path.label=Cale:
+cookies.edit.expire.label=Expiră la:
+cookies.edit.session.label=Sesiune
+cookies.edit.secure.label=Cookie securizat
+cookies.edit.httponly.label=Doar HTTP
+cookies.Filter=Filtrare
+cookies.FilterTooltip=Folosește opțiunile date pentru a filtra lista de cookie-uri.
+cookies.filter.byPath=Filtrează cookie-urile după calea curentă
+cookies.filter.byPathTooltip=Arată doar cookie-uri care se potrivesc cu calea curentă.
+cookies.filter.showRejectedCookies=Arată cookie-urile respinse
+cookies.filter.showRejectedCookiesTooltip=Afișează în listă și cookie-urile respinse.
