--- a/extension/locale/sv-SE/cookies.properties
+++ b/extension/locale/sv-SE/cookies.properties
@@ -1,126 +1,126 @@
 extensions.firecookie@janodvarko.cz.description=Kakhanterare för Firefox. Du måste ha Firebug installerad för att använda detta tillägg.
-firecookie.Panel=Kakor
-firecookie.Session=Session
-firecookie.AllowGlobally=Tillåt kakor från domäner
-firecookie.LogEvents=Visa loggning i konsollen
-firecookie.clearWhenDeny=Ta bort kakor vid avvisning
-firecookie.Cut=Klipp ut
-firecookie.Copy=Kopiera
-firecookie.CopyAll=Kopiera alla
-firecookie.Paste=Klistra in
-firecookie.Delete=Ta bort
-firecookie.Clear_Value=Rensa värde
-firecookie.Edit=Redigera
-firecookie.Accept=Tillåt
-firecookie.header.Reset_Header=Återställ Header
-firecookie.Intro=Du kan ange vilka webbplatser som alltid eller aldrig får använda kakor.\nSkriv in den exakta adressen till webbplatsen och klicka sedan på Blockera,\nTillåt för Session eller Tillåt
-firecookie.ExceptionsTitle=Undantag - Kakor
+cookies.Panel=Kakor
+cookies.Session=Session
+cookies.AllowGlobally=Tillåt kakor från domäner
+cookies.LogEvents=Visa loggning i konsollen
+cookies.clearWhenDeny=Ta bort kakor vid avvisning
+cookies.Cut=Klipp ut
+cookies.Copy=Kopiera
+cookies.CopyAll=Kopiera alla
+cookies.Paste=Klistra in
+cookies.Delete=Ta bort
+cookies.Clear_Value=Rensa värde
+cookies.Edit=Redigera
+cookies.Accept=Tillåt
+cookies.header.Reset_Header=Återställ Header
+cookies.Intro=Du kan ange vilka webbplatser som alltid eller aldrig får använda kakor.\nSkriv in den exakta adressen till webbplatsen och klicka sedan på Blockera,\nTillåt för Session eller Tillåt
+cookies.ExceptionsTitle=Undantag - Kakor
 cookies.modulemanager.description=Stöd för kakövervakning
 cookies.HostEnable=Aktivera kakpanelen för %S
 cookies.HostDisable=Inaktivera kakpanelen för %S
 cookies.Permissions=Panel för att (in)aktivera kakor
 cookies.PermissionsIntro=Välj webbplatser där kakpanelen ska vara (in)aktiverad.
-firecookie.SystemPages=Systemsidor
-firecookie.LocalFiles=Lokala filer
-firecookie.confirm.removeall=Vill du ta bort alla kakor i listan?
-firecookie.confirm.removeallsession=Vill du ta bort alla sessionskakor från listan?
-firecookie.msg.Do_not_show_this_message_again=Visa inte detta meddelande igen
-firecookie.Confirm_cookie_removal=Bekräfta borttagning av kakor
-firecookie.removeall.tooltip=Ta bort alla kakor i listan
-firecookie.Remove_Session_Cookies=Ta bort sessionskakor
-firecookie.removeallsession.tooltip=Ta bort alla sessionskakor i listan.
-firecookie.createcookie.tooltip=Skapa ny kaka för %s
-firecookie.createcookie.defaultvalue=Värde
-firecookie.perm.manage.tooltip=Hantera kakinställningar för %S
-firecookie.console.cookiescleared=Alla kakor har tagits bort.
-firecookie.console.sessioncookiescleared=Alla sessionskakor har tagits bort från listan.
-firecookie.console.cookiesrejected=Avvisade kakor:
-firecookie.console.nocookiesreceived=Inga kakor mottagna
-firecookie.console.cookie=Kaka
-firecookie.console.deleted=borttagen
-firecookie.console.added=tillagd
-firecookie.console.changed=ändrad
-firecookie.console.cleared=rensad
-firecookie.domain.label=Domän
-firecookie.secure.label=Säkra
-firecookie.status.accepted=Accepterade
-firecookie.status.downgraded=Nedgraderade
-firecookie.status.flagged=Flaggade
-firecookie.status.rejected=Avvisade
-firecookie.info.valuetab.label=Värde
-firecookie.info.rawdatatab.Raw_Data=Rådata
-firecookie.info.jsontab.JSON=JSON
-firecookie.info.xmltab.XML=XML
-firecookie.default.session=Standard (tillåt sessionskakor)
-firecookie.default.thirdPartySession=Standard (tillåt sessionskakor)
-firecookie.default.thirdParty=Standard (tillåt kakor)
-firecookie.default.allow=Standard (tillåt kakor)
-firecookie.default.deny=Standard (stoppa kakor)
-firecookie.default.warn=Standard (varna innan kakor tillåts)
-firecookie.host.session=Tillåt sessionskakor från %S
-firecookie.host.accept=Tillåt kakor från %S
-firecookie.host.reject=Stoppa kakor från %S
-firecookie.edit.invalidname=Kakans namn är inte giltigt.
-firecookie.edit.invalidhost=Kakans värd är inte giltig.
-firecookie.edit.invalidpath=Kakans sökväg är inte giltig.
-firecookie.header.name=Namn
-firecookie.header.value=Värde
-firecookie.header.domain=Domän
-firecookie.header.size=Storlek
-firecookie.header.path=Sökväg
-firecookie.header.expires=Förfaller
-firecookie.header.security=Säkerhet
-firecookie.header.status=Status
-firecookie.header.httponly=HttpOnly
-firecookie.header.name.tooltip=Namn på kaka
-firecookie.header.value.tooltip=Värde lagrat i kaka
-firecookie.header.domain.tooltip=Domän som sparat kakan
-firecookie.header.size.tooltip=Storlek på kakan
-firecookie.header.path.tooltip=Katalog där kakan är aktiv
-firecookie.header.expires.tooltip=Förfallodatum för kakan
-firecookie.header.security.tooltip=Visar om kakan är säker eller inte
-firecookie.header.status.tooltip=Kakans status (nedladdad, flaggad etc)
-firecookie.header.httponly.tooltip=Visar om kakan är en HTTP kaka
-firecookie.netinfo.Received_Cookies=Mottagna kakor
-firecookie.netinfo.Sent_Cookies=Skickade kakor
-firecookie.Path_Filter=Sökvägsfilter
-firecookie.menu.Cookies=Kakor
-firecookie.export.Export_All_Cookies=Exportera alla kakor...
-firecookie.export.Export_All_Cookies_Tooltip=Exportera alla kakor till cookies.txt
-firecookie.export.Export_For_Site=Exportera kakor för denna webbplats...
-firecookie.export.Export_For_Site_Tooltip=Exportera kakor för %S till cookies.txt
-firecookie.message.There_is_no_active_page=Det finns ingen aktiv sida.
-firecookie.Break_On_Cookie=Bryt när kakor ändras
-firecookie.Disable_Break_On_Cookie=Inaktivera bryt när kakor ändras
-firecookie.Cookie_Breakpoints=Brytpunkter för kakor
-firecookie.menu.Break_On_Cookie=Bryt vid kaka '%S'
-firecookie.menu.tooltip.Break_On_Cookie=Bryt när kaka '%S' tas bort eller ändras.
-firecookie.menu.Edit_Breakpoint_Condition=Redigera brytpunktsegenskaper
-firecookie.Breakpoint_condition_evaluation_fails=Utvärdering av brytpunksegenskaper misslyckades
-firecookie.RemoveAll=Ta bort kakor
-firecookie.Create=Skapa kaka
-firecookie.Tools=Verktyg
-firecookie.ToolsTooltip=Verktyg
-firecookie.ViewAll=Visa alla kakor...
-firecookie.ViewAllTooltip=Öppna kakhanteraren
-firecookie.ViewExceptions=Tillstånd för webbplatser...
-firecookie.ViewExceptionsTooltip=Visa lista med tillåtna och spärrade webbplatser
-firecookie.Help=Hjälp
-firecookie.HelpTooltip=Hjälp för Firecookie
-firecookie.About=Om...
-firecookie.AboutTooltip=Om Firecookie
-firecookie.Filter=Filter
-firecookie.FilterTooltip=Använd inställningarna för att filtrera kaklistan.
-firecookie.filter.byPath=Filtrera kakor efter aktuell sökväg
-firecookie.filter.byPathTooltip=Visa bara kakor som matchar aktuell sökväg
-firecookie.filter.showRejectedCookies=Visa avvisade kakor
-firecookie.filter.showRejectedCookiesTooltip=Visa även avvisade kakor i listan.
-firecookie.edit.title=Redigera kaka
-firecookie.edit.name.label=Namn:
-firecookie.edit.domain.label=Värd:
-firecookie.edit.path.label=Sökväg:
-firecookie.edit.expire.label=Utgår:
-firecookie.edit.value.label=Värde:
-firecookie.edit.secure.label=Säker kaka
-firecookie.edit.httponly.label=Endast HTTP
-firecookie.edit.session.label=Session
+cookies.SystemPages=Systemsidor
+cookies.LocalFiles=Lokala filer
+cookies.confirm.removeall=Vill du ta bort alla kakor i listan?
+cookies.confirm.removeallsession=Vill du ta bort alla sessionskakor från listan?
+cookies.msg.Do_not_show_this_message_again=Visa inte detta meddelande igen
+cookies.Confirm_cookie_removal=Bekräfta borttagning av kakor
+cookies.removeall.tooltip=Ta bort alla kakor i listan
+cookies.Remove_Session_Cookies=Ta bort sessionskakor
+cookies.removeallsession.tooltip=Ta bort alla sessionskakor i listan.
+cookies.createcookie.tooltip=Skapa ny kaka för %s
+cookies.createcookie.defaultvalue=Värde
+cookies.perm.manage.tooltip=Hantera kakinställningar för %S
+cookies.console.cookiescleared=Alla kakor har tagits bort.
+cookies.console.sessioncookiescleared=Alla sessionskakor har tagits bort från listan.
+cookies.console.cookiesrejected=Avvisade kakor:
+cookies.console.nocookiesreceived=Inga kakor mottagna
+cookies.console.cookie=Kaka
+cookies.console.deleted=borttagen
+cookies.console.added=tillagd
+cookies.console.changed=ändrad
+cookies.console.cleared=rensad
+cookies.domain.label=Domän
+cookies.secure.label=Säkra
+cookies.status.accepted=Accepterade
+cookies.status.downgraded=Nedgraderade
+cookies.status.flagged=Flaggade
+cookies.status.rejected=Avvisade
+cookies.info.valuetab.label=Värde
+cookies.info.rawdatatab.Raw_Data=Rådata
+cookies.info.jsontab.JSON=JSON
+cookies.info.xmltab.XML=XML
+cookies.default.session=Standard (tillåt sessionskakor)
+cookies.default.thirdPartySession=Standard (tillåt sessionskakor)
+cookies.default.thirdParty=Standard (tillåt kakor)
+cookies.default.allow=Standard (tillåt kakor)
+cookies.default.deny=Standard (stoppa kakor)
+cookies.default.warn=Standard (varna innan kakor tillåts)
+cookies.host.session=Tillåt sessionskakor från %S
+cookies.host.accept=Tillåt kakor från %S
+cookies.host.reject=Stoppa kakor från %S
+cookies.edit.invalidname=Kakans namn är inte giltigt.
+cookies.edit.invalidhost=Kakans värd är inte giltig.
+cookies.edit.invalidpath=Kakans sökväg är inte giltig.
+cookies.header.name=Namn
+cookies.header.value=Värde
+cookies.header.domain=Domän
+cookies.header.size=Storlek
+cookies.header.path=Sökväg
+cookies.header.expires=Förfaller
+cookies.header.security=Säkerhet
+cookies.header.status=Status
+cookies.header.httponly=HttpOnly
+cookies.header.name.tooltip=Namn på kaka
+cookies.header.value.tooltip=Värde lagrat i kaka
+cookies.header.domain.tooltip=Domän som sparat kakan
+cookies.header.size.tooltip=Storlek på kakan
+cookies.header.path.tooltip=Katalog där kakan är aktiv
+cookies.header.expires.tooltip=Förfallodatum för kakan
+cookies.header.security.tooltip=Visar om kakan är säker eller inte
+cookies.header.status.tooltip=Kakans status (nedladdad, flaggad etc)
+cookies.header.httponly.tooltip=Visar om kakan är en HTTP kaka
+cookies.netinfo.Received_Cookies=Mottagna kakor
+cookies.netinfo.Sent_Cookies=Skickade kakor
+cookies.Path_Filter=Sökvägsfilter
+cookies.menu.Cookies=Kakor
+cookies.export.Export_All_Cookies=Exportera alla kakor...
+cookies.export.Export_All_Cookies_Tooltip=Exportera alla kakor till cookies.txt
+cookies.export.Export_For_Site=Exportera kakor för denna webbplats...
+cookies.export.Export_For_Site_Tooltip=Exportera kakor för %S till cookies.txt
+cookies.message.There_is_no_active_page=Det finns ingen aktiv sida.
+cookies.Break_On_Cookie=Bryt när kakor ändras
+cookies.Disable_Break_On_Cookie=Inaktivera bryt när kakor ändras
+cookies.Cookie_Breakpoints=Brytpunkter för kakor
+cookies.menu.Break_On_Cookie=Bryt vid kaka '%S'
+cookies.menu.tooltip.Break_On_Cookie=Bryt när kaka '%S' tas bort eller ändras.
+cookies.menu.Edit_Breakpoint_Condition=Redigera brytpunktsegenskaper
+cookies.Breakpoint_condition_evaluation_fails=Utvärdering av brytpunksegenskaper misslyckades
+cookies.RemoveAll=Ta bort kakor
+cookies.Create=Skapa kaka
+cookies.Tools=Verktyg
+cookies.ToolsTooltip=Verktyg
+cookies.ViewAll=Visa alla kakor...
+cookies.ViewAllTooltip=Öppna kakhanteraren
+cookies.ViewExceptions=Tillstånd för webbplatser...
+cookies.ViewExceptionsTooltip=Visa lista med tillåtna och spärrade webbplatser
+cookies.Help=Hjälp
+cookies.HelpTooltip=Hjälp för Firecookie
+cookies.About=Om...
+cookies.AboutTooltip=Om Firecookie
+cookies.Filter=Filter
+cookies.FilterTooltip=Använd inställningarna för att filtrera kaklistan.
+cookies.filter.byPath=Filtrera kakor efter aktuell sökväg
+cookies.filter.byPathTooltip=Visa bara kakor som matchar aktuell sökväg
+cookies.filter.showRejectedCookies=Visa avvisade kakor
+cookies.filter.showRejectedCookiesTooltip=Visa även avvisade kakor i listan.
+cookies.edit.title=Redigera kaka
+cookies.edit.name.label=Namn:
+cookies.edit.domain.label=Värd:
+cookies.edit.path.label=Sökväg:
+cookies.edit.expire.label=Utgår:
+cookies.edit.value.label=Värde:
+cookies.edit.secure.label=Säker kaka
+cookies.edit.httponly.label=Endast HTTP
+cookies.edit.session.label=Session
