--- a/extension/locale/uk-UA/cookies.properties
+++ b/extension/locale/uk-UA/cookies.properties
@@ -1,126 +1,126 @@
 extensions.firecookie@janodvarko.cz.description=Менеджер кук для Firebug.Для роботи цього розширення має також бути встановлений Firebug
-firecookie.Panel=Куки
-firecookie.Session=Сеанс
-firecookie.AllowGlobally=Дозволяти куки з сайтів
-firecookie.LogEvents=Показувати записи в консолі
-firecookie.clearWhenDeny=Очищувати куки при забороні
-firecookie.Cut=Вирізати
-firecookie.Copy=Копіювати
-firecookie.CopyAll=Копіювати все
-firecookie.Paste=Вставити
-firecookie.Delete=Вилучити
-firecookie.Clear_Value=Очистити значення
-firecookie.Edit=Змінити
-firecookie.Accept=Затвердити
-firecookie.header.Reset_Header=Скинути заголовки
-firecookie.Intro=Ви можете вказати які веб-сайти завжди чи ніколи не використовують куки.\nВведіть точну адресу сайту, яким хочете керувати та натисніть\nБлокувати, Дозволити на сеанс чи Дозволити
-firecookie.ExceptionsTitle=Винятки - Куки
+cookies.Panel=Куки
+cookies.Session=Сеанс
+cookies.AllowGlobally=Дозволяти куки з сайтів
+cookies.LogEvents=Показувати записи в консолі
+cookies.clearWhenDeny=Очищувати куки при забороні
+cookies.Cut=Вирізати
+cookies.Copy=Копіювати
+cookies.CopyAll=Копіювати все
+cookies.Paste=Вставити
+cookies.Delete=Вилучити
+cookies.Clear_Value=Очистити значення
+cookies.Edit=Змінити
+cookies.Accept=Затвердити
+cookies.header.Reset_Header=Скинути заголовки
+cookies.Intro=Ви можете вказати які веб-сайти завжди чи ніколи не використовують куки.\nВведіть точну адресу сайту, яким хочете керувати та натисніть\nБлокувати, Дозволити на сеанс чи Дозволити
+cookies.ExceptionsTitle=Винятки - Куки
 cookies.modulemanager.description=Підтримка моніторингу кук
 cookies.HostEnable=Дозволити панель кук для %S
 cookies.HostDisable=Заборонити панель кук для %S
 cookies.Permissions=Дозволити чи заборонити панель кук
 cookies.PermissionsIntro=Оберіть веб-сайти, де Панель кук буде дозволена чи заборонена
-firecookie.SystemPages=Системні сторінки
-firecookie.LocalFiles=Локальні файли
-firecookie.confirm.removeall=Ви хочете вилучити всі куки зі списку?
-firecookie.confirm.removeallsession=Хочете стерти куки всіх сесій зі списку?
-firecookie.msg.Do_not_show_this_message_again=Не питати знову
-firecookie.Confirm_cookie_removal=Підтвердження стирання кук
-firecookie.removeall.tooltip=Вилучити всі куки зі списку
-firecookie.Remove_Session_Cookies=Стерти куки сесії
-firecookie.removeallsession.tooltip=Стерти куки всіх сесій в списку
-firecookie.createcookie.tooltip=Створити нову куку для %S
-firecookie.createcookie.defaultvalue=Значення
-firecookie.perm.manage.tooltip=Керувати дозволами кук для %S
-firecookie.console.cookiescleared=Всі куки було вилучено
-firecookie.console.sessioncookiescleared=Куки всіх сесій були стерті
-firecookie.console.cookiesrejected=Відкинуті куки:
-firecookie.console.nocookiesreceived=Жодної куки не отримано
-firecookie.console.cookie=Кука
-firecookie.console.deleted=вилучена
-firecookie.console.added=додана
-firecookie.console.changed=змінена
-firecookie.console.cleared=очищена
-firecookie.domain.label=Домен
-firecookie.secure.label=Захист
-firecookie.status.accepted=Дозволена
-firecookie.status.downgraded=Понижена
-firecookie.status.flagged=Позначена
-firecookie.status.rejected=Відкинута
-firecookie.info.valuetab.label=Значення
-firecookie.info.rawdatatab.Raw_Data=Сирі дані
-firecookie.info.jsontab.JSON=JSON
-firecookie.info.xmltab.XML=XML
-firecookie.default.session=Типово (Дозволити куки сеансу)
-firecookie.default.thirdPartySession=Типово (Дозволити куки сеансу)
-firecookie.default.thirdParty=Типово (Дозволити куки)
-firecookie.default.allow=Типово (Дозволити куки)
-firecookie.default.deny=Типово (Заборонити куки)
-firecookie.default.warn=Типово (Попереджувати перед затвердженням куки)
-firecookie.host.session=Дозволяти куки сеансу з %S
-firecookie.host.accept=Дозволяти куки з %S
-firecookie.host.reject=Забороняти куки з %S
-firecookie.edit.invalidname=Назва куки неправильна
-firecookie.edit.invalidhost=Хост куки вказано неправильно
-firecookie.edit.invalidpath=Шлях куки неправильний
-firecookie.header.name=Назва
-firecookie.header.value=Значення
-firecookie.header.domain=Домен
-firecookie.header.size=Розмір
-firecookie.header.path=Шлях
-firecookie.header.expires=Дійсна до
-firecookie.header.security=Захист
-firecookie.header.status=Статус
-firecookie.header.httponly=Лише http
-firecookie.header.name.tooltip=Назва куки
-firecookie.header.value.tooltip=Значення, що зберігається для куки
-firecookie.header.domain.tooltip=Домен, що зберігає куку
-firecookie.header.size.tooltip=Розмір збереженої куки
-firecookie.header.path.tooltip=Директорія, де кука є активною
-firecookie.header.expires.tooltip=Дата, до якої кука є дійсною
-firecookie.header.security.tooltip=Показувати захищеність куки
-firecookie.header.status.tooltip=Статус куки (понижена, позначена тощо)
-firecookie.header.httponly.tooltip=Показувати якщо кука є лише для HTTP
-firecookie.netinfo.Received_Cookies=Отримані куки
-firecookie.netinfo.Sent_Cookies=Надіслані куки
-firecookie.Path_Filter=Фільтр шляхів
-firecookie.menu.Cookies=Куки
-firecookie.export.Export_All_Cookies=Експорт всіх кук...
-firecookie.export.Export_All_Cookies_Tooltip=Експортувати всі куки переглядача до файлу cookies.txt
-firecookie.export.Export_For_Site=Експорт кук цього сайту...
-firecookie.export.Export_For_Site_Tooltip=Експортувати куки для %S до файлу cookies.txt
-firecookie.message.There_is_no_active_page=Це неактивна сторінка
-firecookie.Break_On_Cookie=Перервати при зміні куки
-firecookie.Disable_Break_On_Cookie=Вимкнути переривання при зміні куки
-firecookie.Cookie_Breakpoints=Точки переривання куки
-firecookie.menu.Break_On_Cookie=Переривати на '%S'
-firecookie.menu.tooltip.Break_On_Cookie=Переривати на '%S'  коли стирається чи змінюється
-firecookie.menu.Edit_Breakpoint_Condition=Змінити умову переривання
-firecookie.Breakpoint_condition_evaluation_fails=Обчислення умова точки переривання провалилося
-firecookie.RemoveAll=Стерти куки
-firecookie.Create=Створити куку
-firecookie.Tools=Інструменти
-firecookie.ToolsTooltip=Інструменти
-firecookie.ViewAll=Показати всі куки...
-firecookie.ViewAllTooltip=Відкрити менеджер кук
-firecookie.ViewExceptions=Дозволи web-сайтів
-firecookie.ViewExceptionsTooltip=Переглянути список дозволених та заборонених сайтів
-firecookie.Help=Допомога
-firecookie.HelpTooltip=Допомога для Firecookie
-firecookie.About=Про...
-firecookie.AboutTooltip=Про Firecookie
-firecookie.Filter=Фільтр
-firecookie.FilterTooltip=Використати вказані налаштування для фільтрації списку кук.
-firecookie.filter.byPath=Фільтрувати куки за поточним шляхом
-firecookie.filter.byPathTooltip=Показувати куки що відповідають поточному шляху
-firecookie.filter.showRejectedCookies=Показати відкинуті куки
-firecookie.filter.showRejectedCookiesTooltip=Показувати лише відкинуті куки в списку
-firecookie.edit.title=Змінити куку
-firecookie.edit.name.label=Назва:
-firecookie.edit.domain.label=Хост:
-firecookie.edit.path.label=Шлях:
-firecookie.edit.expire.label=Придатна:
-firecookie.edit.value.label=Значення
-firecookie.edit.secure.label=Захищена кука
-firecookie.edit.httponly.label=Лише HTTP
-firecookie.edit.session.label=Сесія
+cookies.SystemPages=Системні сторінки
+cookies.LocalFiles=Локальні файли
+cookies.confirm.removeall=Ви хочете вилучити всі куки зі списку?
+cookies.confirm.removeallsession=Хочете стерти куки всіх сесій зі списку?
+cookies.msg.Do_not_show_this_message_again=Не питати знову
+cookies.Confirm_cookie_removal=Підтвердження стирання кук
+cookies.removeall.tooltip=Вилучити всі куки зі списку
+cookies.Remove_Session_Cookies=Стерти куки сесії
+cookies.removeallsession.tooltip=Стерти куки всіх сесій в списку
+cookies.createcookie.tooltip=Створити нову куку для %S
+cookies.createcookie.defaultvalue=Значення
+cookies.perm.manage.tooltip=Керувати дозволами кук для %S
+cookies.console.cookiescleared=Всі куки було вилучено
+cookies.console.sessioncookiescleared=Куки всіх сесій були стерті
+cookies.console.cookiesrejected=Відкинуті куки:
+cookies.console.nocookiesreceived=Жодної куки не отримано
+cookies.console.cookie=Кука
+cookies.console.deleted=вилучена
+cookies.console.added=додана
+cookies.console.changed=змінена
+cookies.console.cleared=очищена
+cookies.domain.label=Домен
+cookies.secure.label=Захист
+cookies.status.accepted=Дозволена
+cookies.status.downgraded=Понижена
+cookies.status.flagged=Позначена
+cookies.status.rejected=Відкинута
+cookies.info.valuetab.label=Значення
+cookies.info.rawdatatab.Raw_Data=Сирі дані
+cookies.info.jsontab.JSON=JSON
+cookies.info.xmltab.XML=XML
+cookies.default.session=Типово (Дозволити куки сеансу)
+cookies.default.thirdPartySession=Типово (Дозволити куки сеансу)
+cookies.default.thirdParty=Типово (Дозволити куки)
+cookies.default.allow=Типово (Дозволити куки)
+cookies.default.deny=Типово (Заборонити куки)
+cookies.default.warn=Типово (Попереджувати перед затвердженням куки)
+cookies.host.session=Дозволяти куки сеансу з %S
+cookies.host.accept=Дозволяти куки з %S
+cookies.host.reject=Забороняти куки з %S
+cookies.edit.invalidname=Назва куки неправильна
+cookies.edit.invalidhost=Хост куки вказано неправильно
+cookies.edit.invalidpath=Шлях куки неправильний
+cookies.header.name=Назва
+cookies.header.value=Значення
+cookies.header.domain=Домен
+cookies.header.size=Розмір
+cookies.header.path=Шлях
+cookies.header.expires=Дійсна до
+cookies.header.security=Захист
+cookies.header.status=Статус
+cookies.header.httponly=Лише http
+cookies.header.name.tooltip=Назва куки
+cookies.header.value.tooltip=Значення, що зберігається для куки
+cookies.header.domain.tooltip=Домен, що зберігає куку
+cookies.header.size.tooltip=Розмір збереженої куки
+cookies.header.path.tooltip=Директорія, де кука є активною
+cookies.header.expires.tooltip=Дата, до якої кука є дійсною
+cookies.header.security.tooltip=Показувати захищеність куки
+cookies.header.status.tooltip=Статус куки (понижена, позначена тощо)
+cookies.header.httponly.tooltip=Показувати якщо кука є лише для HTTP
+cookies.netinfo.Received_Cookies=Отримані куки
+cookies.netinfo.Sent_Cookies=Надіслані куки
+cookies.Path_Filter=Фільтр шляхів
+cookies.menu.Cookies=Куки
+cookies.export.Export_All_Cookies=Експорт всіх кук...
+cookies.export.Export_All_Cookies_Tooltip=Експортувати всі куки переглядача до файлу cookies.txt
+cookies.export.Export_For_Site=Експорт кук цього сайту...
+cookies.export.Export_For_Site_Tooltip=Експортувати куки для %S до файлу cookies.txt
+cookies.message.There_is_no_active_page=Це неактивна сторінка
+cookies.Break_On_Cookie=Перервати при зміні куки
+cookies.Disable_Break_On_Cookie=Вимкнути переривання при зміні куки
+cookies.Cookie_Breakpoints=Точки переривання куки
+cookies.menu.Break_On_Cookie=Переривати на '%S'
+cookies.menu.tooltip.Break_On_Cookie=Переривати на '%S'  коли стирається чи змінюється
+cookies.menu.Edit_Breakpoint_Condition=Змінити умову переривання
+cookies.Breakpoint_condition_evaluation_fails=Обчислення умова точки переривання провалилося
+cookies.RemoveAll=Стерти куки
+cookies.Create=Створити куку
+cookies.Tools=Інструменти
+cookies.ToolsTooltip=Інструменти
+cookies.ViewAll=Показати всі куки...
+cookies.ViewAllTooltip=Відкрити менеджер кук
+cookies.ViewExceptions=Дозволи web-сайтів
+cookies.ViewExceptionsTooltip=Переглянути список дозволених та заборонених сайтів
+cookies.Help=Допомога
+cookies.HelpTooltip=Допомога для Firecookie
+cookies.About=Про...
+cookies.AboutTooltip=Про Firecookie
+cookies.Filter=Фільтр
+cookies.FilterTooltip=Використати вказані налаштування для фільтрації списку кук.
+cookies.filter.byPath=Фільтрувати куки за поточним шляхом
+cookies.filter.byPathTooltip=Показувати куки що відповідають поточному шляху
+cookies.filter.showRejectedCookies=Показати відкинуті куки
+cookies.filter.showRejectedCookiesTooltip=Показувати лише відкинуті куки в списку
+cookies.edit.title=Змінити куку
+cookies.edit.name.label=Назва:
+cookies.edit.domain.label=Хост:
+cookies.edit.path.label=Шлях:
+cookies.edit.expire.label=Придатна:
+cookies.edit.value.label=Значення
+cookies.edit.secure.label=Захищена кука
+cookies.edit.httponly.label=Лише HTTP
+cookies.edit.session.label=Сесія
