--- a/extension/locale/zh-CN/cookies.properties
+++ b/extension/locale/zh-CN/cookies.properties
@@ -1,126 +1,126 @@
 extensions.firecookie@janodvarko.cz.description=Firebug 的 cookie 管理器。要使用本扩展请先安装 Firebug。
-firecookie.Panel=Cookies
-firecookie.Session=会话
-firecookie.AllowGlobally=接受所有站点的 cookie
-firecookie.LogEvents=在 console 中显示 log
-firecookie.clearWhenDeny=拒绝时清除 cookie
-firecookie.Cut=剪切
-firecookie.Copy=复制
-firecookie.CopyAll=复制所有 cookie
-firecookie.Paste=粘贴
-firecookie.Delete=删除
-firecookie.Clear_Value=清除内容
-firecookie.Edit=编辑
-firecookie.Accept=接受
-firecookie.header.Reset_Header=重置表头
-firecookie.Intro=你可以指定允许或不允许哪些站点使用 cookie。请输入站点的准确地址然后\n单击“阻止”、“会话中允许”或者“允许”。
-firecookie.ExceptionsTitle=例外 - Cookie
+cookies.Panel=Cookies
+cookies.Session=会话
+cookies.AllowGlobally=接受所有站点的 cookie
+cookies.LogEvents=在 console 中显示 log
+cookies.clearWhenDeny=拒绝时清除 cookie
+cookies.Cut=剪切
+cookies.Copy=复制
+cookies.CopyAll=复制所有 cookie
+cookies.Paste=粘贴
+cookies.Delete=删除
+cookies.Clear_Value=清除内容
+cookies.Edit=编辑
+cookies.Accept=接受
+cookies.header.Reset_Header=重置表头
+cookies.Intro=你可以指定允许或不允许哪些站点使用 cookie。请输入站点的准确地址然后\n单击“阻止”、“会话中允许”或者“允许”。
+cookies.ExceptionsTitle=例外 - Cookie
 cookies.modulemanager.description=用于监测 cookie
 cookies.HostEnable=为 %S 启用 Cookies 面板
 cookies.HostDisable=为 %S 禁用 Cookies 面板
 cookies.Permissions=启用或禁用 Cookies 面板
 cookies.PermissionsIntro=选择为站点启用或者禁用 Cookies 面板。
-firecookie.SystemPages=系统页面
-firecookie.LocalFiles=本地文件
-firecookie.confirm.removeall=你确定要移除列表中的所有 cookie？
-firecookie.confirm.removeallsession=你确定要移除列表中的所有会话 cookie？
-firecookie.msg.Do_not_show_this_message_again=不再显示该消息
-firecookie.Confirm_cookie_removal=移除 cookie 前确认
-firecookie.removeall.tooltip=移除列表中的所有 cookie。
-firecookie.Remove_Session_Cookies=移除会话 cookie
-firecookie.removeallsession.tooltip=移除列表中的所有会话 cookie。
-firecookie.createcookie.tooltip=为 %S 新建 cookie
-firecookie.createcookie.defaultvalue=内容
-firecookie.perm.manage.tooltip=管理 %S 的 cookie 设置
-firecookie.console.cookiescleared=所有 cookie 已经被移除。
-firecookie.console.sessioncookiescleared=所有会话 cookie 已经被移除。
-firecookie.console.cookiesrejected=被拒绝的 cookie：
-firecookie.console.nocookiesreceived=没有收到 cookie
-firecookie.console.cookie=Cookie
-firecookie.console.deleted=已经被删除
-firecookie.console.added=已经被添加
-firecookie.console.changed=已经被改变
-firecookie.console.cleared=已经被清除
-firecookie.domain.label=域
-firecookie.secure.label=安全
-firecookie.status.accepted=被接受的
-firecookie.status.downgraded=被降级的
-firecookie.status.flagged=被标记的
-firecookie.status.rejected=被拒绝的
-firecookie.info.valuetab.label=内容
-firecookie.info.rawdatatab.Raw_Data=源数据
-firecookie.info.jsontab.JSON=JSON
-firecookie.info.xmltab.XML=XML
-firecookie.default.session=默认（接受会话 cookie）
-firecookie.default.thirdPartySession=默认（接受第三方会话 cookie）
-firecookie.default.thirdParty=默认（接受第三方 cookie）
-firecookie.default.allow=默认（接受 cookie）
-firecookie.default.deny=默认（拒绝 cookie）
-firecookie.default.warn=默认（在接受 cookie 前警告）
-firecookie.host.session=接受来自 %S 的会话 cookie
-firecookie.host.accept=接受来自 %S 的 cookie
-firecookie.host.reject=拒绝来自 %S 的 cookie
-firecookie.edit.invalidname=Cookie 的名称无效。
-firecookie.edit.invalidhost=Cookie 的主机无效。
-firecookie.edit.invalidpath=Cookie 的路径无效。
-firecookie.header.name=名称
-firecookie.header.value=内容
-firecookie.header.domain=域
-firecookie.header.size=大小
-firecookie.header.path=路径
-firecookie.header.expires=过期时间
-firecookie.header.security=安全
-firecookie.header.status=状态
-firecookie.header.httponly=仅 Http
-firecookie.header.name.tooltip=Cookie 名称
-firecookie.header.value.tooltip=Cookie 保存的内容
-firecookie.header.domain.tooltip=保存该 cookie 的域
-firecookie.header.size.tooltip=Cookie 大小
-firecookie.header.path.tooltip=Cookie 活动的路径
-firecookie.header.expires.tooltip=Cookie 的过期时间
-firecookie.header.security.tooltip=显示是否为安全 cookie
-firecookie.header.status.tooltip=Cookie 状态（被降级的，被标记的…）
-firecookie.header.httponly.tooltip=显示是否为仅 HTTP 的 cookie
-firecookie.netinfo.Received_Cookies=已收到的 cookie
-firecookie.netinfo.Sent_Cookies=已发送的 cookie
-firecookie.Path_Filter=路径过滤器
-firecookie.menu.Cookies=Cookies
-firecookie.export.Export_All_Cookies=导出所有 cookie …
-firecookie.export.Export_All_Cookies_Tooltip=导出浏览器的所有 cookie 至 cookie.txt 文件
-firecookie.export.Export_For_Site=导出本站点的 cookie …
-firecookie.export.Export_For_Site_Tooltip=导出 %S 的 cookie 至 cookie.txt 文件
-firecookie.message.There_is_no_active_page=没有活动的页面
-firecookie.Break_On_Cookie=在 cookie 改变时中断
-firecookie.Disable_Break_On_Cookie=停用在 cookie 改变时中断
-firecookie.Cookie_Breakpoints=Cookie 断点
-firecookie.menu.Break_On_Cookie=在 cookie "%S" 处中断
-firecookie.menu.tooltip.Break_On_Cookie=在 "%S" 被移除或改变时中断
-firecookie.menu.Edit_Breakpoint_Condition=编辑断点条件
-firecookie.Breakpoint_condition_evaluation_fails=评估断点条件失败
-firecookie.RemoveAll=移除所有 cookie
-firecookie.Create=新建 cookie
-firecookie.Tools=工具
-firecookie.ToolsTooltip=工具
-firecookie.ViewAll=显示所有 cookie…
-firecookie.ViewAllTooltip=打开 cookie 管理器
-firecookie.ViewExceptions=例外…
-firecookie.ViewExceptionsTooltip=查看例外网站列表
-firecookie.Help=帮助
-firecookie.HelpTooltip=Firecookie 帮助
-firecookie.About=关于…
-firecookie.AboutTooltip=关于 Firecookie
-firecookie.Filter=过滤器
-firecookie.FilterTooltip=按给定选项过滤 cookie 列表。
-firecookie.filter.byPath=按当前路径过滤 cookie
-firecookie.filter.byPathTooltip=仅显示在当前路径活动的 cookie。
-firecookie.filter.showRejectedCookies=显示被拒绝的 cookie
-firecookie.filter.showRejectedCookiesTooltip=在列表中显示已经被拒绝的 cookie。
-firecookie.edit.title=编辑 cookie
-firecookie.edit.name.label=名称：
-firecookie.edit.domain.label=域：
-firecookie.edit.path.label=路径：
-firecookie.edit.expire.label=过期时间：
-firecookie.edit.value.label=内容：
-firecookie.edit.secure.label=安全 cookie
-firecookie.edit.httponly.label=仅 HTTP
-firecookie.edit.session.label=会话
+cookies.SystemPages=系统页面
+cookies.LocalFiles=本地文件
+cookies.confirm.removeall=你确定要移除列表中的所有 cookie？
+cookies.confirm.removeallsession=你确定要移除列表中的所有会话 cookie？
+cookies.msg.Do_not_show_this_message_again=不再显示该消息
+cookies.Confirm_cookie_removal=移除 cookie 前确认
+cookies.removeall.tooltip=移除列表中的所有 cookie。
+cookies.Remove_Session_Cookies=移除会话 cookie
+cookies.removeallsession.tooltip=移除列表中的所有会话 cookie。
+cookies.createcookie.tooltip=为 %S 新建 cookie
+cookies.createcookie.defaultvalue=内容
+cookies.perm.manage.tooltip=管理 %S 的 cookie 设置
+cookies.console.cookiescleared=所有 cookie 已经被移除。
+cookies.console.sessioncookiescleared=所有会话 cookie 已经被移除。
+cookies.console.cookiesrejected=被拒绝的 cookie：
+cookies.console.nocookiesreceived=没有收到 cookie
+cookies.console.cookie=Cookie
+cookies.console.deleted=已经被删除
+cookies.console.added=已经被添加
+cookies.console.changed=已经被改变
+cookies.console.cleared=已经被清除
+cookies.domain.label=域
+cookies.secure.label=安全
+cookies.status.accepted=被接受的
+cookies.status.downgraded=被降级的
+cookies.status.flagged=被标记的
+cookies.status.rejected=被拒绝的
+cookies.info.valuetab.label=内容
+cookies.info.rawdatatab.Raw_Data=源数据
+cookies.info.jsontab.JSON=JSON
+cookies.info.xmltab.XML=XML
+cookies.default.session=默认（接受会话 cookie）
+cookies.default.thirdPartySession=默认（接受第三方会话 cookie）
+cookies.default.thirdParty=默认（接受第三方 cookie）
+cookies.default.allow=默认（接受 cookie）
+cookies.default.deny=默认（拒绝 cookie）
+cookies.default.warn=默认（在接受 cookie 前警告）
+cookies.host.session=接受来自 %S 的会话 cookie
+cookies.host.accept=接受来自 %S 的 cookie
+cookies.host.reject=拒绝来自 %S 的 cookie
+cookies.edit.invalidname=Cookie 的名称无效。
+cookies.edit.invalidhost=Cookie 的主机无效。
+cookies.edit.invalidpath=Cookie 的路径无效。
+cookies.header.name=名称
+cookies.header.value=内容
+cookies.header.domain=域
+cookies.header.size=大小
+cookies.header.path=路径
+cookies.header.expires=过期时间
+cookies.header.security=安全
+cookies.header.status=状态
+cookies.header.httponly=仅 Http
+cookies.header.name.tooltip=Cookie 名称
+cookies.header.value.tooltip=Cookie 保存的内容
+cookies.header.domain.tooltip=保存该 cookie 的域
+cookies.header.size.tooltip=Cookie 大小
+cookies.header.path.tooltip=Cookie 活动的路径
+cookies.header.expires.tooltip=Cookie 的过期时间
+cookies.header.security.tooltip=显示是否为安全 cookie
+cookies.header.status.tooltip=Cookie 状态（被降级的，被标记的…）
+cookies.header.httponly.tooltip=显示是否为仅 HTTP 的 cookie
+cookies.netinfo.Received_Cookies=已收到的 cookie
+cookies.netinfo.Sent_Cookies=已发送的 cookie
+cookies.Path_Filter=路径过滤器
+cookies.menu.Cookies=Cookies
+cookies.export.Export_All_Cookies=导出所有 cookie …
+cookies.export.Export_All_Cookies_Tooltip=导出浏览器的所有 cookie 至 cookie.txt 文件
+cookies.export.Export_For_Site=导出本站点的 cookie …
+cookies.export.Export_For_Site_Tooltip=导出 %S 的 cookie 至 cookie.txt 文件
+cookies.message.There_is_no_active_page=没有活动的页面
+cookies.Break_On_Cookie=在 cookie 改变时中断
+cookies.Disable_Break_On_Cookie=停用在 cookie 改变时中断
+cookies.Cookie_Breakpoints=Cookie 断点
+cookies.menu.Break_On_Cookie=在 cookie "%S" 处中断
+cookies.menu.tooltip.Break_On_Cookie=在 "%S" 被移除或改变时中断
+cookies.menu.Edit_Breakpoint_Condition=编辑断点条件
+cookies.Breakpoint_condition_evaluation_fails=评估断点条件失败
+cookies.RemoveAll=移除所有 cookie
+cookies.Create=新建 cookie
+cookies.Tools=工具
+cookies.ToolsTooltip=工具
+cookies.ViewAll=显示所有 cookie…
+cookies.ViewAllTooltip=打开 cookie 管理器
+cookies.ViewExceptions=例外…
+cookies.ViewExceptionsTooltip=查看例外网站列表
+cookies.Help=帮助
+cookies.HelpTooltip=Firecookie 帮助
+cookies.About=关于…
+cookies.AboutTooltip=关于 Firecookie
+cookies.Filter=过滤器
+cookies.FilterTooltip=按给定选项过滤 cookie 列表。
+cookies.filter.byPath=按当前路径过滤 cookie
+cookies.filter.byPathTooltip=仅显示在当前路径活动的 cookie。
+cookies.filter.showRejectedCookies=显示被拒绝的 cookie
+cookies.filter.showRejectedCookiesTooltip=在列表中显示已经被拒绝的 cookie。
+cookies.edit.title=编辑 cookie
+cookies.edit.name.label=名称：
+cookies.edit.domain.label=域：
+cookies.edit.path.label=路径：
+cookies.edit.expire.label=过期时间：
+cookies.edit.value.label=内容：
+cookies.edit.secure.label=安全 cookie
+cookies.edit.httponly.label=仅 HTTP
+cookies.edit.session.label=会话
